--- a/articles/cdt/336068.md
+++ b/articles/cdt/336068.md
@@ -1,5 +1,5 @@
 <!--1729943808000-->
-[倪刃｜一个叫沙白的女孩儿决定去安乐死](https://chinadigitaltimes.net/chinese/712507.html)
+[【404文库】倪刃｜一个叫沙白的女孩儿决定去安乐死](https://chinadigitaltimes.net/chinese/712507.html)
 ------
 
 <div style="width:42%;float:right;padding-left:20px;"><div class="su-spoiler su-spoiler-style-fancy su-spoiler-icon-chevron-circle su-spoiler-closed" data-scroll-offset="0" data-anchor-in-url="no"><div class="su-spoiler-title" tabindex="0" role="button"><span class="su-spoiler-icon"></span>CDT 档案卡</div><div class="su-spoiler-content su-u-clearfix su-u-trim"><strong>标题：</strong>一个叫沙白的女孩儿决定去安乐死<br><strong>作者：</strong><a href="https://chinadigitaltimes.net/space/倪刃" target="_blank">倪刃</a><br><strong>发表日期：</strong>2024.10.26<br><strong>来源：</strong><a href="https://web.archive.org/web/https://mp.weixin.qq.com/s/O6jkEq7uSyQzZt3k9rhucA" target="_blank">微信公众号“倪刃”</a><br><strong>主题归类：</strong><a href="https://chinadigitaltimes.net/space/安乐死" target="_blank">安乐死</a><br><strong>CDS收藏：</strong><a href="https://chinadigitaltimes.net/space/%E5%85%AC%E6%B0%91%E9%A6%86" target="_blank" rel="noopener">公民馆</a><br><strong>版权说明：</strong>该作品版权归原作者所有。中国数字时代仅对原作进行存档，以对抗中国的网络审查。<a href="https://chinadigitaltimes.net/chinese/copyright">详细版权说明</a>。</div></div></div><p>上海43岁女子沙白的安乐死，成为一个小小的新闻，很多人都看到了。</p><p>我是昨天知道这件事情的，随即看了她的几个视频，大致了解了事情的来龙去脉。</p><p>女孩家庭条件很不错，在上海有好几套房子，她也是妥妥的精英，能流利讲多国外语，曾经做很好的工作，但患有红斑狼疮已经二十几年，尤其是后来病情严重导致肾功能严重受损，她决定不再继续生命，于是选择到瑞士进行安乐死。</p><p>事情大致是这样，但其中还有很多的细节。只有了解了那些细节，才能搞清楚沙白选择安乐死的真正原因。</p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/10/post-712507-671cd9007267f.png" alt="image"></p><p>其实，安乐死只是沙白人生中一系列不可思议的选择的最后一步。</p><p>她刚查出来红斑狼疮的时候，进行过短暂的治疗，由于激素导致她严重水肿发胖等不良反应，以及生活质量急剧下降，沙白认为治疗的代价是她所不想承受的，因为治疗会让她成为一个真正的病人，所以她选择了停止治疗。</p><p>沙白希望自己就算活得短暂，也能用自己想要的灿烂方式度过一生，而不是苟活。</p><p>在视频中我们可以看到，沙白是个很漂亮的女孩，但她的漂亮并非只来自长相，更是来自打扮和气质。我们确实无法想象她成为一个真正病人的样子。</p><p>除了变丑，沙白还需要付出很多其他方面的代价，比如她不能见阳光。她无法忍受这样的生活，因为她热爱户外、热爱阳光，不想在阴暗中委屈自己的后半生。</p><p>看到这里，可能有一些人会觉得这个女生太做作。但是在我看来，她才是那个真正活得通透的人。</p><p>就因为无法忍受黑暗，沙白在病情没有被控制的情况下，依然选择去享受阳光、沙滩，并且发了很多自己晒黑的美照。她说，她享受自己美好的身材在沙滩上被欣赏的样子，她也享受美好的爱情与性，如果这一切都要被治疗手段所毁掉，她宁可不要治疗。</p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/10/image-1729943599924.png" alt="file"></p><p>总之，她就像是自己没有生病那样活着，享受着人世间的一切灿烂瞬间。但代价也是惨重的——她的病情不断加重，在最痛苦的那些时候她也不得不去接受一些治疗，但她往往很快就离开了医院。</p><p>直到最后，肾功能衰竭让她无法再继续下去了。</p><p>沙白依然对病魔“宁死不屈”，她毅然决然选择了到瑞士进行安乐死。尽管她母亲强烈反对、只有父亲支持，也无法改变她的选择。</p><p>这些，也只是我看的视频中她所讲的一些内容，肯定无法涉及她生活的全貌。但在她的讲述中，我已经大致了解了这位女性的死亡动机。</p><p>很多人说沙白自私，是因为她没有“对家人负责”，没有“考虑爱她的人的感受”。</p><p>但我想说的是，如果别人真的爱她，一定会尊重她的选择。反对她的，则不是真正爱她的人。</p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/10/post-712507-671cd9008249a.png" alt="image"></p><p>我们没必要高估每一种关系，包括父母与子女的关系、夫妻关系。人来到这个世间，本质上注定是孤独的。即便再爱沙白的人，也无法代替沙白去活，她的生命最终只属于她自己。</p><p>我经常看到有些人说：“那些自杀的人才是懦夫，因为活着才是最难的。”</p><p>抱歉，对这句话我忍不住要骂了：“纯属放屁，虚伪至极。”</p><p>自杀是世界上最艰难的选择，就算是一个再被病痛折磨的人，想要提及自杀都是非常困难的，因为人的求生本能极其强大，想要克服这种本能极其艰难。</p><p>选择活着，很多时候只是怕死和苟活而已。不要装点自己，说什么为了家人和父母而活，在真正的死亡面前，那些都是过眼云烟。每个人都会很珍惜自己的命。</p><p>沙白的逃避治疗也是她被人批评的原因之一，很多人认为，她因为自私和享乐而选择了一条更容易的路，放弃治疗。但实际上，她选择的是一条更困难的路。</p><p>放弃治疗难道不痛吗？沙白在视频中讲过多次，不吃药让她经常痛不欲生，免疫系统攻击关节的时候，她夜里痛到死去活来，最后依靠强力镇痛药才得以缓解。尽管如此她还是选择不治疗。</p><p>此外还有各种各样我们想象不到的痛苦：持续高烧、严重水肿带来的疼痛、频繁透析……如果选择治疗，这些症状都能得到极大的缓解。沙白并不愚蠢，她知道自己选择的路意味着什么。</p><p>沙白是一个贪图享乐的人吗？如果是，她反而会选择吃药苟活。她选择的是一边忍受着病痛，一边还要辛勤工作和享受生活，每天把自己收拾得漂漂亮亮，这些都是要付出巨大的心血，比呆在家里接受伺候要难多了。</p><p>她家里的物质条件，足以支撑她用躺平的方式度过一生。</p><p>所以从方方面面看来，沙白选择的都是一条更为艰难的路，而且路的终点是早早死亡。</p><p>生如夏花之绚烂，沙白就是这样的人生观。</p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/10/post-712507-671cd9009ef53.png" alt="image"></p><p>人究竟应当怎样活着？沙白选择的是让自己活成自己想要的样子，而不是别人眼中想要的样子。</p><p>用自己喜欢的方式度过一生，这就是幸福。</p><p>怎样才是不自私？难道为了家人的期望，让自己的后半生委曲求全，就是不自私？沙白宁可去死，也不愿意让自己成为一个丑陋的胖子，在黑暗中苟活一生，这是她的个人追求、个人价值，每个人都必须尊重她的选择，包括她的家人。</p><p>还是那句话，如果爱她，就尊重她。</p><p>一切试图用自己的想法去改变她、控制她，反而是自私的行为。</p><p>当然，并不是说沙白这种生活态度就是绝对的正确。因为每个人都有自己的价值观标准，大多数人为了治病，是愿意让自己变胖变丑的，也愿意生活在黑暗中，这也是大多数人的正当选择，同样也值得尊重。</p><p>所以沙白也在视频中反反复复提醒观众，尤其是红斑狼疮的病友，千万不要盲目效仿她，这一切是她自己的选择，不代表正确。</p><p>是的，生活是自己的选择，生活只与自己有关。</p><p>父母再爱沙白，病痛也是沙白自己的，那些她所选择的欢愉、灿烂，也都是她自己的，冷暖自知。</p><p>不要尝试替别人而活，也不要让别人替自己活。</p><p>就我个人而言，我很欣赏沙白的生活态度。人只活一次，按照自己想要的方式去活，去尽可能享受人间的一切美好，坚持自己想要坚持的，这样的选择无比幸福。</p><p>作家毛姆曾说过：“我们不过是宇宙里的尘埃、时间长河里的水滴。所以大胆去做不要怕，没有人在乎。&nbsp;就算有人在乎，人又算什么东西。”</p><p>众生皆草木、皆沙粒，最终尘归尘、土归土。生命唯一的意义，便是我们曾经的生活方式、我们在这一生中度过的每个瞬间。</p><p>沙白临终前所听的音乐，是她所热爱的舒伯特即兴曲……此刻我听着这段音乐，面前仿佛看到她自由的魂灵，正在无垠的宇宙中翩然舞蹈。没有泪水也没有悲伤，只有永恒、平和与爱——那便是我们在宇宙中所能留下的印迹。</p><p>那想象中的她的舞姿，宛如她最后的倔强，依然是最美的。</p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/10/post-712507-671cd900a7ae2." alt="image"></p><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/712507.html" data-a2a-title="倪刃｜一个叫沙白的女孩儿决定去安乐死"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F712507.html&amp;linkname=%E5%80%AA%E5%88%83%EF%BD%9C%E4%B8%80%E4%B8%AA%E5%8F%AB%E6%B2%99%E7%99%BD%E7%9A%84%E5%A5%B3%E5%AD%A9%E5%84%BF%E5%86%B3%E5%AE%9A%E5%8E%BB%E5%AE%89%E4%B9%90%E6%AD%BB" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F712507.html&amp;linkname=%E5%80%AA%E5%88%83%EF%BD%9C%E4%B8%80%E4%B8%AA%E5%8F%AB%E6%B2%99%E7%99%BD%E7%9A%84%E5%A5%B3%E5%AD%A9%E5%84%BF%E5%86%B3%E5%AE%9A%E5%8E%BB%E5%AE%89%E4%B9%90%E6%AD%BB" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F712507.html&amp;linkname=%E5%80%AA%E5%88%83%EF%BD%9C%E4%B8%80%E4%B8%AA%E5%8F%AB%E6%B2%99%E7%99%BD%E7%9A%84%E5%A5%B3%E5%AD%A9%E5%84%BF%E5%86%B3%E5%AE%9A%E5%8E%BB%E5%AE%89%E4%B9%90%E6%AD%BB" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_reddit" href="https://www.addtoany.com/add_to/reddit?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F712507.html&amp;linkname=%E5%80%AA%E5%88%83%EF%BD%9C%E4%B8%80%E4%B8%AA%E5%8F%AB%E6%B2%99%E7%99%BD%E7%9A%84%E5%A5%B3%E5%AD%A9%E5%84%BF%E5%86%B3%E5%AE%9A%E5%8E%BB%E5%AE%89%E4%B9%90%E6%AD%BB" title="Reddit" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F712507.html&amp;linkname=%E5%80%AA%E5%88%83%EF%BD%9C%E4%B8%80%E4%B8%AA%E5%8F%AB%E6%B2%99%E7%99%BD%E7%9A%84%E5%A5%B3%E5%AD%A9%E5%84%BF%E5%86%B3%E5%AE%9A%E5%8E%BB%E5%AE%89%E4%B9%90%E6%AD%BB" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F712507.html&amp;linkname=%E5%80%AA%E5%88%83%EF%BD%9C%E4%B8%80%E4%B8%AA%E5%8F%AB%E6%B2%99%E7%99%BD%E7%9A%84%E5%A5%B3%E5%AD%A9%E5%84%BF%E5%86%B3%E5%AE%9A%E5%8E%BB%E5%AE%89%E4%B9%90%E6%AD%BB" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_copy_link" href="https://www.addtoany.com/add_to/copy_link?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F712507.html&amp;linkname=%E5%80%AA%E5%88%83%EF%BD%9C%E4%B8%80%E4%B8%AA%E5%8F%AB%E6%B2%99%E7%99%BD%E7%9A%84%E5%A5%B3%E5%AD%A9%E5%84%BF%E5%86%B3%E5%AE%9A%E5%8E%BB%E5%AE%89%E4%B9%90%E6%AD%BB" title="Copy Link" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
