--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,7 +5,7 @@
 
 10-26 [【CDTV】【图说天朝】2023万圣节被诊断为新的错误记忆？](/articles/cdt/336066.md)
 
-10-26 [倪刃｜一个叫沙白的女孩儿决定去安乐死](/articles/cdt/336068.md)
+10-26 [【404文库】倪刃｜一个叫沙白的女孩儿决定去安乐死](/articles/cdt/336068.md)
 
 10-26 [【网络民议】知乎问答｜为什么恨国党觉得出去就能活得比中国更好呢？](/articles/cdt/336071.md)
 
