--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-27 [巴基斯坦西北部自杀爆炸炸死八人](/articles/voa/1011510.md)
+
 10-27 [以色列袭击伊朗震动世界，许多国家发声呼吁各方克制防止冲突扩大](/articles/voa/1011511.md)
 
 10-26 [朝军介入俄乌战争后果严重，美重量级议员呼吁必要时采取直接军事行动](/articles/voa/1011512.md)
@@ -598,6 +600,4 @@
 10-15 [前台湾总统蔡英文在访问捷克期间呼吁释放黎智英](/articles/voa/1011808.md)
 
 10-15 [英国外交大臣访华面临多重考验](/articles/voa/1011809.md)
-
-10-15 [中国举行绕台湾演习后，欧盟敦促各方“克制”](/articles/voa/1011810.md)
 
