--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-27 [【重温】中国新闻周刊｜临夏12岁女童性侵事件调查](/articles/cdt/336033.md)
+
 10-27 [追月数星的朋友圈｜12岁女童被轮奸引爆网络后，领导下跪“求饶”，如今孩子抑郁自杀却不管不问](/articles/cdt/336038.md)
 
 10-27 [【404文库】廖信忠｜今日巨鹿路City Walk](/articles/cdt/336042.md)
@@ -598,6 +600,4 @@
 9-20 [【404文库】建设性意见｜建议权威部门尽快出台《仇恨指南》](/articles/cdt/337006.md)
 
 9-21 [【CDT关注】德国之声｜美国牧师林大卫在华遭囚18年后终获释](/articles/cdt/337011.md)
-
-9-19 [【404文库】打冷｜他杀死的，是深圳人的孩子](/articles/cdt/337013.md)
 
