--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-27 [美国宣布对台20亿美元军售后 中国誓言要予以坚决“反制”](/articles/voa/1011502.md)
+
 10-27 [中国主导的亚投行的行长批评发达国家设置贸易壁垒](/articles/voa/1011503.md)
 
 10-27 [七国集团同意采取新措施限制俄罗斯逃避制裁](/articles/voa/1011504.md)
@@ -598,6 +600,4 @@
 10-15 [中欧电动车贸易战酝酿之际，巴黎车展拉开帷幕](/articles/voa/1011800.md)
 
 10-15 [加拿大与印度因2023年暗杀事件驱逐对方外交官](/articles/voa/1011801.md)
-
-10-15 [熊猫归来！“宝力”和“青宝”即将抵达华盛顿国家动物园](/articles/voa/1011802.md)
 
