--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-27 [路透：卫星图像显示以色列袭击了伊朗的导弹燃料混合设施](/articles/voa/1011500.md)
+
+10-27 [遭台积电停止供货 中企算能科技否认做华为“白手套”](/articles/voa/1011501.md)
+
 10-27 [美国宣布对台20亿美元军售后 中国誓言要予以坚决“反制”](/articles/voa/1011502.md)
 
 10-27 [中国主导的亚投行的行长批评发达国家设置贸易壁垒](/articles/voa/1011503.md)
@@ -596,8 +600,4 @@
 10-15 [德国特勤部门对俄罗斯的威胁感到震惊](/articles/voa/1011798.md)
 
 10-15 [泽连斯基：我们将保卫乌克兰抵御任何帮助俄罗斯的国家](/articles/voa/1011799.md)
-
-10-15 [中欧电动车贸易战酝酿之际，巴黎车展拉开帷幕](/articles/voa/1011800.md)
-
-10-15 [加拿大与印度因2023年暗杀事件驱逐对方外交官](/articles/voa/1011801.md)
 
