--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-27 [美宣布对台军售隔天 解放军再越台海中线](/articles/dw/1023875.md)
+
 10-27 [男性避孕：正在兴起的产业革命](/articles/dw/1023876.md)
 
 10-27 [人工智能：德国还能赶上世界吗？](/articles/dw/1023877.md)
@@ -598,6 +600,4 @@
 9-28 [专家：中国需要测试能力以确保其核武库可靠性](/articles/dw/1024173.md)
 
 9-28 [中国演训：紧随中美外长会晤 撞期美菲等四国军演](/articles/dw/1024174.md)
-
-9-28 [欧洲智库：如果中国攻台 欧盟制裁需要快、准、狠](/articles/dw/1024175.md)
 
