--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-27 [重读李志绥，重估毛泽东与习近平](/articles/voa/1011493.md)
+
 10-27 [伊朗最高领袖称以色列袭击既不应“被夸大”，也“不应被淡化”](/articles/voa/1011494.md)
 
 10-27 [“抱薪者，不要使其冻死于风雪”洛杉矶异议人士声援被中国警方非法拘捕的人权律师](/articles/voa/1011495.md)
@@ -598,6 +600,4 @@
 10-15 [美媒：以色列向白宫保证，不会攻击伊朗的核或石油设施](/articles/voa/1011791.md)
 
 10-15 [韩军：朝鲜炸毁了连接韩朝边界公路的北侧路段](/articles/voa/1011792.md)
-
-10-15 [日本关注中国“围台军演” 向中国传达“关切”](/articles/voa/1011793.md)
 
