--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-27 [万圣节前夕上海气氛紧张：当局禁“角色扮演”加强维稳，闹市仍见“奇装异服”](/articles/voa/1011491.md)
+
+10-27 [普京再威胁若西方协助乌打击俄纵深目标，莫斯科将做出反应](/articles/voa/1011492.md)
+
 10-27 [重读李志绥，重估毛泽东与习近平](/articles/voa/1011493.md)
 
 10-27 [伊朗最高领袖称以色列袭击既不应“被夸大”，也“不应被淡化”](/articles/voa/1011494.md)
@@ -596,8 +600,4 @@
 10-15 [中国军方周一围台军演动用战机创下153架次单日最高纪录](/articles/voa/1011789.md)
 
 10-15 [在中国围台军演隔天 美菲展开年度联合军演](/articles/voa/1011790.md)
-
-10-15 [美媒：以色列向白宫保证，不会攻击伊朗的核或石油设施](/articles/voa/1011791.md)
-
-10-15 [韩军：朝鲜炸毁了连接韩朝边界公路的北侧路段](/articles/voa/1011792.md)
 
