--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-28 [日本政坛地震，选民让自民党和公明党联盟失去众议院多数席位](/articles/voa/1011490.md)
+
 10-27 [万圣节前夕上海气氛紧张：当局禁“角色扮演”加强维稳，闹市仍见“奇装异服”](/articles/voa/1011491.md)
 
 10-27 [普京再威胁若西方协助乌打击俄纵深目标，莫斯科将做出反应](/articles/voa/1011492.md)
@@ -598,6 +600,4 @@
 10-15 [财新称北京考虑发行六万亿元人民币特别国债刺激经济](/articles/voa/1011788.md)
 
 10-15 [中国军方周一围台军演动用战机创下153架次单日最高纪录](/articles/voa/1011789.md)
-
-10-15 [在中国围台军演隔天 美菲展开年度联合军演](/articles/voa/1011790.md)
 
