--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-28 [以色列希望报复攻击的针对性目标将限制伊朗的回应](/articles/voa/1011489.md)
+
 10-28 [日本政坛地震，选民让自民党和公明党联盟失去众议院多数席位](/articles/voa/1011490.md)
 
 10-27 [万圣节前夕上海气氛紧张：当局禁“角色扮演”加强维稳，闹市仍见“奇装异服”](/articles/voa/1011491.md)
@@ -598,6 +600,4 @@
 10-15 [马尼拉指责中国民兵船“故意撞击”菲律宾民用船只](/articles/voa/1011787.md)
 
 10-15 [财新称北京考虑发行六万亿元人民币特别国债刺激经济](/articles/voa/1011788.md)
-
-10-15 [中国军方周一围台军演动用战机创下153架次单日最高纪录](/articles/voa/1011789.md)
 
