--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-28 [加沙卫生部说，以色列袭击加沙北部造成22人死亡](/articles/voa/1011487.md)
+
 10-28 [加州华人积极投票，部分选民通过微信了解选情令人担忧](/articles/voa/1011488.md)
 
 10-28 [以色列希望报复攻击的针对性目标将限制伊朗的回应](/articles/voa/1011489.md)
@@ -598,6 +600,4 @@
 10-16 [蒲黄榆说：从韩江获诺贝尔文学奖看东亚的软实力竞争](/articles/voa/1011785.md)
 
 10-15 [数字揭开中立面纱：中国九月份对俄出口创九个月以来最大增幅](/articles/voa/1011786.md)
-
-10-15 [马尼拉指责中国民兵船“故意撞击”菲律宾民用船只](/articles/voa/1011787.md)
 
