--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-28 [中国制造商利用全球推动可再生能源的契机获利](/articles/voa/1011486.md)
+
 10-28 [加沙卫生部说，以色列袭击加沙北部造成22人死亡](/articles/voa/1011487.md)
 
 10-28 [加州华人积极投票，部分选民通过微信了解选情令人担忧](/articles/voa/1011488.md)
@@ -598,6 +600,4 @@
 10-16 [中共严管护照 走回毛时代闭关锁国的内控外防老路？](/articles/voa/1011784.md)
 
 10-16 [蒲黄榆说：从韩江获诺贝尔文学奖看东亚的软实力竞争](/articles/voa/1011785.md)
-
-10-15 [数字揭开中立面纱：中国九月份对俄出口创九个月以来最大增幅](/articles/voa/1011786.md)
 
