--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-28 [埃及总统建议加沙停火两天，释放四名人质](/articles/voa/1011485.md)
+
 10-28 [中国制造商利用全球推动可再生能源的契机获利](/articles/voa/1011486.md)
 
 10-28 [加沙卫生部说，以色列袭击加沙北部造成22人死亡](/articles/voa/1011487.md)
@@ -598,6 +600,4 @@
 10-16 [巴基斯坦在严密的安保措施下举办上海合作组织峰会](/articles/voa/1011783.md)
 
 10-16 [中共严管护照 走回毛时代闭关锁国的内控外防老路？](/articles/voa/1011784.md)
-
-10-16 [蒲黄榆说：从韩江获诺贝尔文学奖看东亚的软实力竞争](/articles/voa/1011785.md)
 
