--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-28 [猛犸工作室｜高位买房的人，选择与自己和解](/articles/cdt/336000.md)
+
 10-28 [风声OPINION｜为什么男士们不能理解脱口秀里女性的幽默？](/articles/cdt/336007.md)
 
 10-28 [再昧拾金｜克里姆林宫为什么要禁止异装狂欢](/articles/cdt/336009.md)
@@ -598,6 +600,4 @@
 9-20 [竹不倒｜日企通知员工返回日本不算个好消](/articles/cdt/336986.md)
 
 9-20 [有病要讀書plus｜悼念那位日籍男孩：在罪恶中游泳的人，必将在悲哀中沉没](/articles/cdt/336987.md)
-
-9-20 [【404文库】尼德罗｜一篇质量不高的文章，但就是发不出来](/articles/cdt/336991.md)
 
