--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-28 [特朗普和哈里斯全力以赴竞选 试图在最后一刻赢得更多选民的支持](/articles/voa/1011483.md)
+
+10-28 [从移民政策到堕胎权利：美国大选的五大关键议题](/articles/voa/1011484.md)
+
 10-28 [埃及总统建议加沙停火两天，释放四名人质](/articles/voa/1011485.md)
 
 10-28 [中国制造商利用全球推动可再生能源的契机获利](/articles/voa/1011486.md)
@@ -596,8 +600,4 @@
 10-16 [开中文课、赴新疆游：中国文化外交攻势瞄向印尼穆斯林](/articles/voa/1011781.md)
 
 10-16 [专家调查：2024年中国经济增速只有4.8%，房地产衰退还将持续数年](/articles/voa/1011782.md)
-
-10-16 [巴基斯坦在严密的安保措施下举办上海合作组织峰会](/articles/voa/1011783.md)
-
-10-16 [中共严管护照 走回毛时代闭关锁国的内控外防老路？](/articles/voa/1011784.md)
 
