--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-28 [2.9万亿人民币中期贷款到期前 中国央行推出新借贷工具](/articles/voa/1011482.md)
+
 10-28 [特朗普和哈里斯全力以赴竞选 试图在最后一刻赢得更多选民的支持](/articles/voa/1011483.md)
 
 10-28 [从移民政策到堕胎权利：美国大选的五大关键议题](/articles/voa/1011484.md)
@@ -598,6 +600,4 @@
 10-16 [熊猫抵达美国 即将前往华盛顿国家动物园](/articles/voa/1011780.md)
 
 10-16 [开中文课、赴新疆游：中国文化外交攻势瞄向印尼穆斯林](/articles/voa/1011781.md)
-
-10-16 [专家调查：2024年中国经济增速只有4.8%，房地产衰退还将持续数年](/articles/voa/1011782.md)
 
