--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-28 [记录台北：迪化街上的美国大选](/articles/dw/1023869.md)
+
 10-28 [日本眾議院大選：失速的自民黨與被問責的石破茂](/articles/dw/1023870.md)
 
 10-28 [巴黎车展 中欧车企摆擂台](/articles/dw/1023871.md)
@@ -598,6 +600,4 @@
 9-29 [客座評論：傘運十年 香港人的政治覺醒與破滅](/articles/dw/1024167.md)
 
 9-29 [客座评论：怨恨和猜忌交织的中蒙关系](/articles/dw/1024168.md)
-
-9-29 [解构刀郎：音乐奇迹之密码](/articles/dw/1024169.md)
 
