--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-28 [美国民主还好吗？美国人不乐观](/articles/nyt/1042272.md)
+
 10-28 [知情人士称中国黑客瞄准特朗普和万斯手机数据](/articles/nyt/1042273.md)
 
 10-28 [中国进一步收紧对稀土开采、冶炼和出口限制](/articles/nyt/1042274.md)
@@ -598,6 +600,4 @@
 7-17 [读懂《乡下人的悲歌》，你就懂了万斯和2024年大选](/articles/nyt/1042570.md)
 
 7-17 [若特朗普-万斯当选，“弱势美元”时代将到来？](/articles/nyt/1042571.md)
-
-7-17 [郭文贵欺诈等九项罪名成立，或面临数十年监禁](/articles/nyt/1042572.md)
 
