--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-28 [日本众议院大选无任何党派获得多数席位 政府形势动荡](/articles/voa/1011479.md)
+
+10-28 [美大选中迥异的全球愿景：哈里斯主张结盟，特朗普强调美国优先](/articles/voa/1011480.md)
+
 10-28 [上海警方出动大批警力 全力阻止万圣节扮装狂欢](/articles/voa/1011481.md)
 
 10-28 [2.9万亿人民币中期贷款到期前 中国央行推出新借贷工具](/articles/voa/1011482.md)
@@ -596,8 +600,4 @@
 10-16 [冲突与气候变迁加剧非洲饥荒](/articles/voa/1011777.md)
 
 10-16 [德桑蒂斯州长称赞米尔顿飓风后的复原努力，佛罗里达州洪水同时持续上涨](/articles/voa/1011778.md)
-
-10-16 [美伊对峙升级，美国安专家呼吁制定新伊朗战略时必须考虑制裁中国](/articles/voa/1011779.md)
-
-10-16 [熊猫抵达美国 即将前往华盛顿国家动物园](/articles/voa/1011780.md)
 
