--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-28 [黑噪音｜财政：从突击花钱到无钱可花](/articles/cdt/335992.md)
+
+10-28 [木蹊说｜95后硕士炒股两周赚110万？这碗鸡汤有剧毒](/articles/cdt/335994.md)
+
 10-28 [亮见｜骑手公敌，报应来了？](/articles/cdt/335997.md)
 
 10-28 [猛犸工作室｜高位买房的人，选择与自己和解](/articles/cdt/336000.md)
@@ -596,8 +600,4 @@
 9-20 [【CDT关注】东京人文论坛｜部分在日中国人关于深圳918日籍学童遇袭事件的联署声明](/articles/cdt/336981.md)
 
 9-20 [赎罪券销售中心｜为什么要有日本人学校 ？](/articles/cdt/336984.md)
-
-9-20 [桃花潭李白｜仇恨机制，没道理可讲](/articles/cdt/336985.md)
-
-9-20 [竹不倒｜日企通知员工返回日本不算个好消](/articles/cdt/336986.md)
 
