--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-28 [大众汽车计划关闭德国三处工厂 员工面临裁员减薪](/articles/dw/1023862.md)
+
+10-28 [伊拉克抗议以色列侵犯其领空](/articles/dw/1023863.md)
+
 10-28 [伊拉克抗议以色列使用其领空攻击伊朗](/articles/dw/1023864.md)
 
 10-28 [北约秘书长证实朝鲜派兵援俄](/articles/dw/1023865.md)
@@ -596,8 +600,4 @@
 9-29 [带你去看月亮：德国Luna月球训练中心揭幕](/articles/dw/1024160.md)
 
 9-29 [瑞士表示支持中国主导的和平计划 基辅方面表示失望](/articles/dw/1024161.md)
-
-9-29 [中国外长：2758号决议没有灰色地带 台外交部：中國应停止誤導國際視聽](/articles/dw/1024162.md)
-
-9-29 [消费降级 房市低迷——上海街头民众怎么看？](/articles/dw/1024163.md)
 
