--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-28 [每日一语 2024.10.27](/articles/cdt/335978.md)
+
 10-28 [四环青年｜小吃店一年最低交3600元垃圾处理费，难怪生意不好做](/articles/cdt/335984.md)
 
 10-28 [魏春亮说｜杭州万圣节，玩疯了](/articles/cdt/335986.md)
@@ -598,6 +600,4 @@
 9-21 [仇恨之下，无人生还｜hayami’s blog](/articles/cdt/336962.md)
 
 9-21 [真实影像｜秦晖：义和团的真相](/articles/cdt/336963.md)
-
-9-21 [【网络民议】“很多人在乎的是立场，是国籍，是历史，是仇恨，根本没人在乎这个生命”](/articles/cdt/336968.md)
 
