--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-28 [北京一小学门口发生持刀伤人案，包括三名未成年人在内的五人受伤](/articles/voa/1011475.md)
+
 10-28 [担忧人口持续下跌，中国出台政策强化生育支持](/articles/voa/1011476.md)
 
 10-28 [经济困境迫使当局放松监管，中国私人课外辅导服务公司或东山再起](/articles/voa/1011477.md)
@@ -598,6 +600,4 @@
 10-16 [美国防部称密切监视中国围台军演 美前官员：只演习一天北京或认已达到发信号目的](/articles/voa/1011773.md)
 
 10-16 [美国对为巴勒斯坦解放人民阵线筹款的“假慈善机构”实施制裁](/articles/voa/1011774.md)
-
-10-16 [美国会要求总统促使中国释放错误拘留的美国人](/articles/voa/1011775.md)
 
