--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-29 [基本常识｜今年第几起了？海淀一小学门口发生持刀袭击案](/articles/cdt/335976.md)
+
 10-28 [每日一语 2024.10.27](/articles/cdt/335978.md)
 
 10-28 [四环青年｜小吃店一年最低交3600元垃圾处理费，难怪生意不好做](/articles/cdt/335984.md)
@@ -598,6 +600,4 @@
 9-21 [【404文库】念个咒语会下雨｜十岁日本男孩被害的背后：快手上278个视频呼吁“拆除日本学校”，点赞量超两百万](/articles/cdt/336960.md)
 
 9-21 [仇恨之下，无人生还｜hayami’s blog](/articles/cdt/336962.md)
-
-9-21 [真实影像｜秦晖：义和团的真相](/articles/cdt/336963.md)
 
