--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-29 [日本大选执政联盟未过半 台湾学者：弱势领导恐冲击印太安全布局](/articles/voa/1011470.md)
+
+10-29 [竞选商品销售量预测大选结果比民调还准？](/articles/voa/1011471.md)
+
 10-29 [北约证实朝鲜派兵参战俄乌战争，显示俄乌冲突的“重大升级”](/articles/voa/1011472.md)
 
 10-29 [伊朗称将“使用所有可用的工具”对以色列袭击作出回应](/articles/voa/1011473.md)
@@ -596,8 +600,4 @@
 10-16 [北京呼吁采取紧急措施 巴基斯坦将加强对中国项目的安全保障](/articles/voa/1011768.md)
 
 10-16 [韩国加强对南中国海有限度的承诺](/articles/voa/1011769.md)
-
-10-16 [佐治亚州法官裁定：郡选举官员必须认证选举结果](/articles/voa/1011770.md)
-
-10-16 [世卫组织：尽管遭受以色列攻击，加沙脊髓灰质炎防治开展顺利](/articles/voa/1011771.md)
 
