--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-29 [恫吓与毒打：在海上面对中国霸凌的越南渔民](/articles/nyt/1042270.md)
+
 10-28 [中共意识形态“国师”王沪宁的新任务：台湾](/articles/nyt/1042271.md)
 
 10-28 [美国民主还好吗？美国人不乐观](/articles/nyt/1042272.md)
@@ -598,6 +600,4 @@
 7-18 [香港记者协会主席被《华尔街日报》解雇](/articles/nyt/1042568.md)
 
 7-18 [特朗普称台湾应向美国支付防务费用](/articles/nyt/1042569.md)
-
-7-17 [读懂《乡下人的悲歌》，你就懂了万斯和2024年大选](/articles/nyt/1042570.md)
 
