--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+10-29 [朝鲜士兵前往俄乌前线 美国：约万人在俄受训](/articles/dw/1023859.md)
+
+10-29 [新規出爐：美再收緊對中國AI與先進半導體投資](/articles/dw/1023860.md)
+
+10-29 [白宫国家安全沟通顾问：三千朝鲜士兵入俄“令人担忧”](/articles/dw/1023861.md)
+
 10-28 [大众汽车计划关闭德国三处工厂 员工面临裁员减薪](/articles/dw/1023862.md)
 
 10-28 [伊拉克抗议以色列侵犯其领空](/articles/dw/1023863.md)
@@ -594,10 +600,4 @@
 9-29 [德国特斯拉工厂病假率超高 人事部对病假员工突击家访引争议](/articles/dw/1024157.md)
 
 9-29 [真主党领袖丧生后 多国呼吁停火 伊朗要求安理会召开紧急会议](/articles/dw/1024158.md)
-
-9-29 [真主党领袖丧生后 多国呼吁停火 伊朗要求安理会召开会议](/articles/dw/1024159.md)
-
-9-29 [带你去看月亮：德国Luna月球训练中心揭幕](/articles/dw/1024160.md)
-
-9-29 [瑞士表示支持中国主导的和平计划 基辅方面表示失望](/articles/dw/1024161.md)
 
