--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-29 [美官员：中俄和古巴散布有关飓风的虚假信息](/articles/voa/1011455.md)
+
 10-29 [香港特首施政报告提出“简朴房”政策，机构质疑能否真正解决劏房问题](/articles/voa/1011456.md)
 
 10-29 [美韩即将举行高层会谈，密切关注朝鲜出兵援俄问题](/articles/voa/1011457.md)
@@ -598,6 +600,4 @@
 10-17 [泽连斯基：情报证实朝鲜既向俄提供武器又派兵助战，是战争的实际参与者](/articles/voa/1011753.md)
 
 10-17 [秋季广交会开幕 分析:热闹场面难掩中国经济疲软](/articles/voa/1011754.md)
-
-10-16 [泽连斯基的“胜利计划”有哪些要点？](/articles/voa/1011755.md)
 
