--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-29 [川普 vs. 賀錦麗：中國偏好誰當選美國總統？](/articles/dw/1023858.md)
+
 10-29 [朝鲜士兵前往俄乌前线 美国：约万人在俄受训](/articles/dw/1023859.md)
 
 10-29 [新規出爐：美再收緊對中國AI與先進半導體投資](/articles/dw/1023860.md)
@@ -598,6 +600,4 @@
 9-29 [奥地利大选：投票开始 极右翼政党期待历史性胜利](/articles/dw/1024156.md)
 
 9-29 [德国特斯拉工厂病假率超高 人事部对病假员工突击家访引争议](/articles/dw/1024157.md)
-
-9-29 [真主党领袖丧生后 多国呼吁停火 伊朗要求安理会召开紧急会议](/articles/dw/1024158.md)
 
