--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-29 [日本众议院选举：亚洲最稳定的民主国家陷入混乱](/articles/nyt/1042268.md)
+
 10-29 [谋杀、污染、投机狂潮：中国如何驯服“疯狂的”稀土行业](/articles/nyt/1042269.md)
 
 10-29 [恫吓与毒打：在海上面对中国霸凌的越南渔民](/articles/nyt/1042270.md)
@@ -598,6 +600,4 @@
 7-18 [援建基地还是永久驻军？中国在柬埔寨军事存在引争议](/articles/nyt/1042566.md)
 
 7-18 [民主党面临团结危机：拜登能否消弭党内愤怒不满](/articles/nyt/1042567.md)
-
-7-18 [香港记者协会主席被《华尔街日报》解雇](/articles/nyt/1042568.md)
 
