--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-29 [路透独家：习近平曾要求拜登把“不支持台湾独立”改为“反对台湾独立”，但遭拒](/articles/voa/1011450.md)
+
+10-29 [中国称发现深海间谍装置和可引导外国潜艇的水下“灯塔”](/articles/voa/1011451.md)
+
 10-29 [美国高级外交官抵台访问 台湾官员试图淡化特朗普的批评](/articles/voa/1011452.md)
 
 10-29 [极星汽车称, 拜登政府的提议将“实际禁止”其汽车在美国销售](/articles/voa/1011453.md)
@@ -596,8 +600,4 @@
 10-17 [巴基斯坦各界对李强有关中巴经济走廊的说法褒贬不一](/articles/voa/1011748.md)
 
 10-17 [“无国界记者”秘书长柏儒廷: 习近平打压各种声音“荒谬至极”](/articles/voa/1011749.md)
-
-10-17 [台湾亲中艺人挺中共军演引众怒 民间吁修法处以“教唆”罪](/articles/voa/1011750.md)
-
-10-17 [为孤立俄罗斯再做努力，欧盟与海湾国家举行首次峰会](/articles/voa/1011751.md)
 
