--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-29 [中国证实一名韩国男性因触犯《反间谍法》被捕](/articles/dw/1023856.md)
+
 10-29 [路透社：中国正考虑发行10万亿特别债券](/articles/dw/1023857.md)
 
 10-29 [川普 vs. 賀錦麗：中國偏好誰當選美國總統？](/articles/dw/1023858.md)
@@ -598,6 +600,4 @@
 9-30 [中國欲下調現有房貸利率 學者：提油救火](/articles/dw/1024154.md)
 
 9-29 [黎巴嫩总理：以色列袭击可能造成多达100万黎巴嫩人流离失所](/articles/dw/1024155.md)
-
-9-29 [奥地利大选：投票开始 极右翼政党期待历史性胜利](/articles/dw/1024156.md)
 
