--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-29 [预计北京下周增发逾十万亿元新债券，美大选结果将决定债券最后规模](/articles/voa/1011448.md)
+
+10-29 [报复西方限制中国获取尖端芯片及技术，北京进一步收紧对稀土产业管控](/articles/voa/1011449.md)
+
 10-29 [路透独家：习近平曾要求拜登把“不支持台湾独立”改为“反对台湾独立”，但遭拒](/articles/voa/1011450.md)
 
 10-29 [中国称发现深海间谍装置和可引导外国潜艇的水下“灯塔”](/articles/voa/1011451.md)
@@ -596,8 +600,4 @@
 10-17 [泽连斯基呼吁让乌克兰加入北约和更多重建援助](/articles/voa/1011746.md)
 
 10-17 [以色列空袭在黎巴嫩南部城镇造成16人死亡，包括该市市长](/articles/voa/1011747.md)
-
-10-17 [巴基斯坦各界对李强有关中巴经济走廊的说法褒贬不一](/articles/voa/1011748.md)
-
-10-17 [“无国界记者”秘书长柏儒廷: 习近平打压各种声音“荒谬至极”](/articles/voa/1011749.md)
 
