--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-29 [专家预测：今年四季度中国制造业依然在荣枯线左右徘徊](/articles/voa/1011446.md)
+
+10-29 [一名在华韩国人因涉嫌间谍罪被捕，成为首位被控触犯新版《反间谍法》的韩国人](/articles/voa/1011447.md)
+
 10-29 [预计北京下周增发逾十万亿元新债券，美大选结果将决定债券最后规模](/articles/voa/1011448.md)
 
 10-29 [报复西方限制中国获取尖端芯片及技术，北京进一步收紧对稀土产业管控](/articles/voa/1011449.md)
@@ -596,8 +600,4 @@
 10-17 [行业整顿令前景黯淡 中国金融专业人士纷纷转行](/articles/voa/1011744.md)
 
 10-17 [习近平称愿和美国做伙伴和朋友 观察人士：听其言，观其行](/articles/voa/1011745.md)
-
-10-17 [泽连斯基呼吁让乌克兰加入北约和更多重建援助](/articles/voa/1011746.md)
-
-10-17 [以色列空袭在黎巴嫩南部城镇造成16人死亡，包括该市市长](/articles/voa/1011747.md)
 
