--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-30 [世界媒体看中国：政策折腾下的经济](/articles/voa/1011443.md)
+
+10-30 [朝军援俄的连锁反应：乌韩加强合作，美国取消对乌使用美国武器的限制](/articles/voa/1011444.md)
+
 10-30 [黎巴嫩真主党领袖命丧以军空袭后，二号人物成为最高领导人](/articles/voa/1011445.md)
 
 10-29 [专家预测：今年四季度中国制造业依然在荣枯线左右徘徊](/articles/voa/1011446.md)
@@ -596,8 +600,4 @@
 10-17 [美国防部官员：中国对台“联合利剑2024B”演习不负责任、破坏稳定](/articles/voa/1011741.md)
 
 10-17 [美国海军一架电战机华盛顿州坠毁](/articles/voa/1011742.md)
-
-10-17 [两家美国广播电台停止播放俄罗斯支持的宣传节目](/articles/voa/1011743.md)
-
-10-17 [行业整顿令前景黯淡 中国金融专业人士纷纷转行](/articles/voa/1011744.md)
 
