--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-30 [每日一语 2024.10.29](/articles/cdt/335958.md)
+
 10-29 [地球公民金建国｜他们正在摧毁中国人的形象](/articles/cdt/335968.md)
 
 10-29 [人物｜“50岁霸总”，围猎空心老年人](/articles/cdt/335970.md)
@@ -598,6 +600,4 @@
 9-21 [阜成门六号院｜社会暴力，从卞仲耘到深圳日本学校小男孩的死](/articles/cdt/336946.md)
 
 9-21 [三联生活周刊｜高温下，倒在玉米地里的四川农村老人](/articles/cdt/336951.md)
-
-9-21 [【404文库】水瓶纪元｜从深圳到东京：他们为那个孩子守夜](/articles/cdt/336956.md)
 
