--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 10-30 [每日一语 2024.10.29](/articles/cdt/335958.md)
 
+10-30 [喻涛｜“yq班”：歧视背后的文化重塑](/articles/cdt/335966.md)
+
 10-29 [地球公民金建国｜他们正在摧毁中国人的形象](/articles/cdt/335968.md)
 
 10-29 [人物｜“50岁霸总”，围猎空心老年人](/articles/cdt/335970.md)
@@ -598,6 +600,4 @@
 9-21 [维权网｜张展被控“寻衅滋事”遭刑事拘留，母亲同时失联](/articles/cdt/336945.md)
 
 9-21 [阜成门六号院｜社会暴力，从卞仲耘到深圳日本学校小男孩的死](/articles/cdt/336946.md)
-
-9-21 [三联生活周刊｜高温下，倒在玉米地里的四川农村老人](/articles/cdt/336951.md)
 
