--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-30 [欧盟将于周四前对从中国进口的电动汽车加征关税](/articles/voa/1011436.md)
+
+10-30 [据报道习近平要求拜登修改台湾政策措辞，白宫重申“一个中国”政策](/articles/voa/1011437.md)
+
 10-30 [支联会国安案邹幸彤申吾尔开希等海外证人视像作供被拒 质疑当局修例针对](/articles/voa/1011438.md)
 
 10-30 [日本重启在严重毁坏福岛核电站的地震中幸存的核反应堆](/articles/voa/1011439.md)
@@ -596,8 +600,4 @@
 10-17 [台湾驻南非代表被要求限期处迁出首都 台官员批中国打压、研拟反制措施](/articles/voa/1011734.md)
 
 10-17 [日本首相石破茂向靖国神社供奉祭品 引发中韩批评](/articles/voa/1011735.md)
-
-10-17 [中国救房市 “白名单”项目的信贷加倍至4万亿人民币](/articles/voa/1011736.md)
-
-10-17 [美国海关暂停部分中国大疆无人机进口 指控涉及强迫劳动](/articles/voa/1011737.md)
 
