--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,10 @@
 
 10-30 [每日一语 2024.10.29](/articles/cdt/335958.md)
 
+10-30 [【旧文重温】南风窗｜他们扮鬼，只是为了活出样来](/articles/cdt/335960.md)
+
+10-30 [姚志勇律师｜少捕慎诉慎押的政策正在变化](/articles/cdt/335964.md)
+
 10-30 [喻涛｜“yq班”：歧视背后的文化重塑](/articles/cdt/335966.md)
 
 10-29 [地球公民金建国｜他们正在摧毁中国人的形象](/articles/cdt/335968.md)
@@ -596,8 +600,4 @@
 9-21 [常识流通处｜一些人，需要提升“含人量”](/articles/cdt/336937.md)
 
 9-21 [ali老蒋说｜中国互联网的高质量技术内容已死](/articles/cdt/336942.md)
-
-9-21 [维权网｜张展被控“寻衅滋事”遭刑事拘留，母亲同时失联](/articles/cdt/336945.md)
-
-9-21 [阜成门六号院｜社会暴力，从卞仲耘到深圳日本学校小男孩的死](/articles/cdt/336946.md)
 
