--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,18 @@
 美国之音
 ------
 
+10-30 [美国敲定新规，禁止美国公司和个人帮助中国开发尖端半导体、人工智能和量子计算](/articles/voa/1011427.md)
+
+10-30 [世卫组织：去年有创纪录的逾800万人患有结核病](/articles/voa/1011428.md)
+
+10-30 [联合国秘书长反对以色列禁止支持巴勒斯坦人机构的计划](/articles/voa/1011429.md)
+
+10-30 [美国总统大选倒计时一周，哈里斯和特朗普相互攻击](/articles/voa/1011430.md)
+
+10-30 [美国欢迎中印降低边界紧张局势的努力](/articles/voa/1011431.md)
+
+10-30 [五角大楼称一些朝鲜部队现身库尔斯克战场](/articles/voa/1011432.md)
+
 10-30 [泰国利用赌场提振经济，但风险仍存](/articles/voa/1011433.md)
 
 10-30 [中国人权律师余文生与妻子许艳被判徒刑](/articles/voa/1011434.md)
@@ -588,16 +600,4 @@
 10-18 [美国制裁生产用于俄乌战争的远程攻击无人机的三家俄中公司及个人](/articles/voa/1011725.md)
 
 10-18 [德国拟出台促进风电产业措施 抗衡中国风电公司在欧势头](/articles/voa/1011726.md)
-
-10-17 [台湾驻孟买办事处揭牌开馆，北京要求印度审慎处理涉台问题](/articles/voa/1011727.md)
-
-10-17 [世界媒体看中国－经济图景的晦暗与疯狂](/articles/voa/1011728.md)
-
-10-17 [中国支撑房地产业措施令投资人失望，中国和香港股市房地产股暴跌](/articles/voa/1011729.md)
-
-10-17 [耶伦：美国构建关税高墙“严重误导”，美中经济关系的基础是“公平竞争”](/articles/voa/1011730.md)
-
-10-17 [中国五部门推稳楼市“组合拳” 分析:新瓶装旧酒难收实效](/articles/voa/1011731.md)
-
-10-17 [孙韵：金砖组织挑战重重](/articles/voa/1011732.md)
 
