--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+10-30 [“对奇装异服说再见！”上海严防万圣节狂欢](/articles/nyt/1042265.md)
+
+10-30 [中国黑客目标包括特朗普家人和拜登政府官员](/articles/nyt/1042266.md)
+
 10-29 [无论谁赢得大选，美国庇护制度都将“终结”？](/articles/nyt/1042267.md)
 
 10-29 [日本众议院选举：亚洲最稳定的民主国家陷入混乱](/articles/nyt/1042268.md)
@@ -596,8 +600,4 @@
 7-19 [万斯和特朗普一样，都是骗子](/articles/nyt/1042563.md)
 
 7-19 [知情人称拜登似乎已开始接受退选可能性](/articles/nyt/1042564.md)
-
-7-19 [政策、口号与“秦刚同志”之谜：解读中共三中全会公报](/articles/nyt/1042565.md)
-
-7-18 [援建基地还是永久驻军？中国在柬埔寨军事存在引争议](/articles/nyt/1042566.md)
 
