--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-30 [美国制裁失效？台积电尖端芯片流入华为](/articles/nyt/1042264.md)
+
 10-30 [“对奇装异服说再见！”上海严防万圣节狂欢](/articles/nyt/1042265.md)
 
 10-30 [中国黑客目标包括特朗普家人和拜登政府官员](/articles/nyt/1042266.md)
@@ -598,6 +600,4 @@
 7-19 [从自我毁灭到自我约束：当特朗普像奥巴马一样演讲](/articles/nyt/1042562.md)
 
 7-19 [万斯和特朗普一样，都是骗子](/articles/nyt/1042563.md)
-
-7-19 [知情人称拜登似乎已开始接受退选可能性](/articles/nyt/1042564.md)
 
