--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-30 [英外相拉米访华引议会质询，坦言聚焦人权和制裁问题](/articles/voa/1011426.md)
+
 10-30 [美国敲定新规，禁止美国公司和个人帮助中国开发尖端半导体、人工智能和量子计算](/articles/voa/1011427.md)
 
 10-30 [世卫组织：去年有创纪录的逾800万人患有结核病](/articles/voa/1011428.md)
@@ -598,6 +600,4 @@
 10-18 [日本民调：执政的自民党可能在大选中失去众议院多数席次](/articles/voa/1011724.md)
 
 10-18 [美国制裁生产用于俄乌战争的远程攻击无人机的三家俄中公司及个人](/articles/voa/1011725.md)
-
-10-18 [德国拟出台促进风电产业措施 抗衡中国风电公司在欧势头](/articles/voa/1011726.md)
 
