--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-30 [歐盟正式對華電動車加徵關稅 中方：不接受](/articles/dw/1023852.md)
+
 10-30 [“风险太高” 苏黎世艺术大学终止与哈工大合作办学](/articles/dw/1023853.md)
 
 10-29 [彭博社：印度iPhone出口激增](/articles/dw/1023854.md)
@@ -598,6 +600,4 @@
 9-30 [奥地利大选 极右翼政党获胜](/articles/dw/1024150.md)
 
 9-30 [周五举行关税表决 欧盟称之后还可继续谈](/articles/dw/1024151.md)
-
-9-30 [金門立委陳玉珍：「金廈同城生活圈」已成形](/articles/dw/1024152.md)
 
