--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-30 [欧盟对中国电动汽车加征关税 引发北京不满](/articles/voa/1011425.md)
+
 10-30 [英外相拉米访华引议会质询，坦言聚焦人权和制裁问题](/articles/voa/1011426.md)
 
 10-30 [美国敲定新规，禁止美国公司和个人帮助中国开发尖端半导体、人工智能和量子计算](/articles/voa/1011427.md)
@@ -598,6 +600,4 @@
 10-18 [联邦调查局逮捕了在X平台上袭击美国证交会账户的黑客嫌疑人](/articles/voa/1011723.md)
 
 10-18 [日本民调：执政的自民党可能在大选中失去众议院多数席次](/articles/voa/1011724.md)
-
-10-18 [美国制裁生产用于俄乌战争的远程攻击无人机的三家俄中公司及个人](/articles/voa/1011725.md)
 
