--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-30 [字节跳动创始人登顶中国富豪榜 但亿万富翁总财富普遍缩水](/articles/voa/1011423.md)
+
 10-30 [中国发射神舟十九号飞船 向空间站派遣新航天员乘组](/articles/voa/1011424.md)
 
 10-30 [欧盟对中国电动汽车加征关税 引发北京不满](/articles/voa/1011425.md)
@@ -598,6 +600,4 @@
 10-18 [美国制裁两家中国实体 称它们制造和运输俄罗斯用于俄乌战争的无人机](/articles/voa/1011721.md)
 
 10-18 [前港督彭定康和英国大学校长呼吁为香港BNO持有人提供本地生学费待遇](/articles/voa/1011722.md)
-
-10-18 [联邦调查局逮捕了在X平台上袭击美国证交会账户的黑客嫌疑人](/articles/voa/1011723.md)
 
