--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-30 [俄罗斯、中国和伊朗如何干预2024年美国大选](/articles/nyt/1042262.md)
+
 10-30 [从农民、泥瓦匠到摇滚明星：瓦依那乐队的“大梦”](/articles/nyt/1042263.md)
 
 10-30 [美国制裁失效？台积电尖端芯片流入华为](/articles/nyt/1042264.md)
@@ -598,6 +600,4 @@
 7-22 [关于时报对马云和肖建华的调查，你需要知道的七个要点](/articles/nyt/1042560.md)
 
 7-22 [拜登宣布退选：放弃寻求连任，转而支持哈里斯](/articles/nyt/1042561.md)
-
-7-19 [从自我毁灭到自我约束：当特朗普像奥巴马一样演讲](/articles/nyt/1042562.md)
 
