--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-30 [美国选举人团制度再受瞩目  卡玛拉·哈里斯团队欲说还休](/articles/dw/1023850.md)
+
+10-30 [特朗普称拜登让过多移民进入美国 事实是什么](/articles/dw/1023851.md)
+
 10-30 [歐盟正式對華電動車加徵關稅 中方：不接受](/articles/dw/1023852.md)
 
 10-30 [“风险太高” 苏黎世艺术大学终止与哈工大合作办学](/articles/dw/1023853.md)
@@ -596,8 +600,4 @@
 9-30 [客座评论：中国议题为何没成为美国大选焦点？](/articles/dw/1024148.md)
 
 9-30 [长平漫游：火车又晚点了](/articles/dw/1024149.md)
-
-9-30 [奥地利大选 极右翼政党获胜](/articles/dw/1024150.md)
-
-9-30 [周五举行关税表决 欧盟称之后还可继续谈](/articles/dw/1024151.md)
 
