--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-30 [朝鲜可能在美国大选前后试射洲际弹道导弹](/articles/voa/1011421.md)
+
 10-30 [印太地区进入“新导弹时代” 澳大利亚将加大导弹生产](/articles/voa/1011422.md)
 
 10-30 [字节跳动创始人登顶中国富豪榜 但亿万富翁总财富普遍缩水](/articles/voa/1011423.md)
@@ -598,6 +600,4 @@
 10-18 [哈马斯领导人叶海亚·辛瓦尔其人](/articles/voa/1011719.md)
 
 10-18 [以色列杀死去年10月7日恐怖攻击的策划者](/articles/voa/1011720.md)
-
-10-18 [美国制裁两家中国实体 称它们制造和运输俄罗斯用于俄乌战争的无人机](/articles/voa/1011721.md)
 
