--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+10-30 [互呛“垃圾”美国选前两党攻击升级](/articles/dw/1023846.md)
+
+10-30 [德国经济第三季度出乎意料实现正增长](/articles/dw/1023847.md)
+
+10-30 [炸毁医院是战争罪吗？](/articles/dw/1023848.md)
+
 10-30 [汽车行业转型导致德国再减少14万工业岗位](/articles/dw/1023849.md)
 
 10-30 [美国选举人团制度再受瞩目  卡玛拉·哈里斯团队欲说还休](/articles/dw/1023850.md)
@@ -594,10 +600,4 @@
 10-1 [国庆之际 中国解放军“剑指”南海](/articles/dw/1024144.md)
 
 10-1 [拜登大手筆對台軍援 分析：為白宮易主分散風險](/articles/dw/1024145.md)
-
-10-1 [中共建政75週年 習近平：堅持黨總攬全局](/articles/dw/1024146.md)
-
-9-30 [中国股市上演狂飙  刺激措施推动股市翻红](/articles/dw/1024147.md)
-
-9-30 [客座评论：中国议题为何没成为美国大选焦点？](/articles/dw/1024148.md)
 
