--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-30 [北京十万亿刺激计划引争议，专家:对经济的作用止痛大于助推](/articles/voa/1011418.md)
+
+10-30 [王毅会见俄副外长，侵乌战争是重点话题](/articles/voa/1011419.md)
+
 10-30 [普京如何看待在哈里斯和特朗普之间的选择？](/articles/voa/1011420.md)
 
 10-30 [朝鲜可能在美国大选前后试射洲际弹道导弹](/articles/voa/1011421.md)
@@ -596,8 +600,4 @@
 10-18 [报道称蔡英文将访美 前美联邦众议员：应展开双臂欢迎她](/articles/voa/1011716.md)
 
 10-18 [直击假信息：当美国之音遇上“美国之声”，揭示TikTok和X上的假新闻账户](/articles/voa/1011717.md)
-
-10-18 [专家：加沙居民将面临饥荒的威胁](/articles/voa/1011718.md)
-
-10-18 [哈马斯领导人叶海亚·辛瓦尔其人](/articles/voa/1011719.md)
 
