--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-30 [美军夏威夷演习 《纽时》:大国备战为台海](/articles/dw/1023841.md)
+
 10-30 [媒体：北京要求车商暂缓在支持关税国家大举投资](/articles/dw/1023842.md)
 
 10-30 [加拿大指控莫迪副手牵涉锡克教人士遇刺案](/articles/dw/1023843.md)
@@ -598,6 +600,4 @@
 10-1 [山陀兒来袭 台湾军队“迎战”](/articles/dw/1024139.md)
 
 10-1 [几年前的欣喜和乐观到哪里去了？](/articles/dw/1024140.md)
-
-10-1 [以色列对黎巴嫩南部发起地面攻势  百万人流离失所](/articles/dw/1024141.md)
 
