--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-30 [朝鲜外相将在莫斯科会晤俄罗斯外长，进行“战略磋商”](/articles/voa/1011416.md)
+
+10-30 [俄乌战争局势突变，基辅宣布新一轮军事动员征召16万军人](/articles/voa/1011417.md)
+
 10-30 [北京十万亿刺激计划引争议，专家:对经济的作用止痛大于助推](/articles/voa/1011418.md)
 
 10-30 [王毅会见俄副外长，侵乌战争是重点话题](/articles/voa/1011419.md)
@@ -596,8 +600,4 @@
 10-18 [首尔是否有权重新处理核废料引发辩论](/articles/voa/1011714.md)
 
 10-18 [拉斯维加斯法院判处杀害记者的官员28年有期徒刑](/articles/voa/1011715.md)
-
-10-18 [报道称蔡英文将访美 前美联邦众议员：应展开双臂欢迎她](/articles/voa/1011716.md)
-
-10-18 [直击假信息：当美国之音遇上“美国之声”，揭示TikTok和X上的假新闻账户](/articles/voa/1011717.md)
 
