--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-31 [【404文库】“长期以来，中国的水库移民都处于被动、被强制的弱势地位”（外二篇）](/articles/cdt/335941.md)
+
 10-30 [亮见｜我又被美团投诉了](/articles/cdt/335944.md)
 
 10-30 [第五二六区｜万圣节没啥可怕，高抬贵手放过他们吧！](/articles/cdt/335946.md)
@@ -598,6 +600,4 @@
 9-22 [特正经的张某某｜中国教育的精深细密：从发型，到厕所，到书包](/articles/cdt/336921.md)
 
 9-22 [读宋史的赵大胖｜ 正常人不要痴迷于“我发现了一个恐怖的大阴谋”](/articles/cdt/336922.md)
-
-9-22 [玖奌杂货店｜祝你平安](/articles/cdt/336925.md)
 
