--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-31 [美财政部：将与台湾展开全面税务谈判避免双重课税](/articles/voa/1011410.md)
+
+10-31 [香港高才通计划欲“抢人才” “高才”入港后却一职难求](/articles/voa/1011411.md)
+
 10-31 [美国在新行动中对俄罗斯躲避制裁进行打击 制裁公司中包括中国大陆和香港公司](/articles/voa/1011412.md)
 
 10-31 [美军空袭叙利亚多处地点，打死“伊斯兰国”武装分子或多达35人](/articles/voa/1011413.md)
@@ -596,8 +600,4 @@
 10-18 [赖清德感谢台军应处中国演习，称将建造11艘千吨级船舰守护海疆](/articles/voa/1011708.md)
 
 10-18 [英外交大臣拉米访华，寻求与中国建立务实关系](/articles/voa/1011709.md)
-
-10-18 [中国启动新一轮人口抽样调查，希望了解“不想生、不敢生”的原因](/articles/voa/1011710.md)
-
-10-18 [中国第三季度GDP增长创下自2023年初以来的最低增速](/articles/voa/1011711.md)
 
