--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+10-31 [美司法部：包括中国公民在内的两名跨国洗钱组织成员承认将数千万美元的贩毒收益进行洗钱](/articles/voa/1011407.md)
+
+10-31 [消费者支出强劲，美国经济上季度稳步增长2.8%](/articles/voa/1011408.md)
+
+10-31 [真主党新领导人誓言继续与以色列作战](/articles/voa/1011409.md)
+
 10-31 [美财政部：将与台湾展开全面税务谈判避免双重课税](/articles/voa/1011410.md)
 
 10-31 [香港高才通计划欲“抢人才” “高才”入港后却一职难求](/articles/voa/1011411.md)
@@ -594,10 +600,4 @@
 10-18 [以军打死辛瓦尔后，内塔尼亚胡称加沙和黎巴嫩战争仍将持续](/articles/voa/1011705.md)
 
 10-18 [韩国：朝鲜派兵援俄参战对国际安全构成严重威胁](/articles/voa/1011706.md)
-
-10-18 [真主党：辛瓦尔死后，与以色列的战争将进一步升级](/articles/voa/1011707.md)
-
-10-18 [赖清德感谢台军应处中国演习，称将建造11艘千吨级船舰守护海疆](/articles/voa/1011708.md)
-
-10-18 [英外交大臣拉米访华，寻求与中国建立务实关系](/articles/voa/1011709.md)
 
