--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-31 [外企再出事？阿斯利康中國區總裁遭調查](/articles/dw/1023840.md)
+
 10-30 [美军夏威夷演习 《纽时》:大国备战为台海](/articles/dw/1023841.md)
 
 10-30 [媒体：北京要求车商暂缓在支持关税国家大举投资](/articles/dw/1023842.md)
@@ -598,6 +600,4 @@
 10-1 [中国女子陷间谍门 克拉：与我本人工作无关联](/articles/dw/1024138.md)
 
 10-1 [山陀兒来袭 台湾军队“迎战”](/articles/dw/1024139.md)
-
-10-1 [几年前的欣喜和乐观到哪里去了？](/articles/dw/1024140.md)
 
