--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-31 [欧盟正式对中国产电动汽车加征关税](/articles/nyt/1042260.md)
+
 10-31 [中国阴影笼罩欧洲，西班牙试图扩大对华经济联系](/articles/nyt/1042261.md)
 
 10-30 [俄罗斯、中国和伊朗如何干预2024年美国大选](/articles/nyt/1042262.md)
@@ -598,6 +600,4 @@
 7-22 [哈里斯能否顺利“接班”拜登？](/articles/nyt/1042558.md)
 
 7-22 [解读中共三中全会《决定》：未提出解决经济问题具体方案](/articles/nyt/1042559.md)
-
-7-22 [关于时报对马云和肖建华的调查，你需要知道的七个要点](/articles/nyt/1042560.md)
 
