--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-31 [建设性意见｜计划生育政策还要存在多久？](/articles/cdt/335937.md)
+
 10-31 [【404出版】學人Scholar｜告别三辉图书：“为这个未知的世界留存一些思想，尽管很微不足道”](/articles/cdt/335939.md)
 
 10-31 [【404文库】“长期以来，中国的水库移民都处于被动、被强制的弱势地位”（外二篇）](/articles/cdt/335941.md)
@@ -598,6 +600,4 @@
 9-24 [【404文库】“是否还愿意继续开放？是否还珍惜人的生命、尊严和自由？”（外二篇）](/articles/cdt/336914.md)
 
 9-22 [每日一语 2024.9.21](/articles/cdt/336918.md)
-
-9-22 [特正经的张某某｜中国教育的精深细密：从发型，到厕所，到书包](/articles/cdt/336921.md)
 
