--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-31 [美国军队如何为与中国的“大国战争”做准备](/articles/nyt/1042259.md)
+
 10-31 [欧盟正式对中国产电动汽车加征关税](/articles/nyt/1042260.md)
 
 10-31 [中国阴影笼罩欧洲，西班牙试图扩大对华经济联系](/articles/nyt/1042261.md)
@@ -598,6 +600,4 @@
 7-22 [揭秘马云和“明天系”肖建华的隐秘商业联系](/articles/nyt/1042557.md)
 
 7-22 [哈里斯能否顺利“接班”拜登？](/articles/nyt/1042558.md)
-
-7-22 [解读中共三中全会《决定》：未提出解决经济问题具体方案](/articles/nyt/1042559.md)
 
