--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-31 [剥洋葱people｜被造谣“十万彩礼做女友”女生：我不是货架上的商品](/articles/cdt/335933.md)
+
 10-31 [建设性意见｜计划生育政策还要存在多久？](/articles/cdt/335937.md)
 
 10-31 [【404出版】學人Scholar｜告别三辉图书：“为这个未知的世界留存一些思想，尽管很微不足道”](/articles/cdt/335939.md)
@@ -598,6 +600,4 @@
 9-22 [【CDT报告汇】连线中国：西藏数字监控登峰造极 远超新疆（外二篇）](/articles/cdt/336913.md)
 
 9-24 [【404文库】“是否还愿意继续开放？是否还珍惜人的生命、尊严和自由？”（外二篇）](/articles/cdt/336914.md)
-
-9-22 [每日一语 2024.9.21](/articles/cdt/336918.md)
 
