--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-31 [奥斯汀曝朝鲜军队着俄罗斯制服正前往乌克兰 韩防长忧朝鲜半岛威胁升级](/articles/voa/1011393.md)
+
+10-31 [中国10月官方制造业PMI为50.1 睽违半年重回扩张区间](/articles/voa/1011394.md)
+
 10-31 [朝鲜发射旨在打击美国的远程导弹 美韩将以“战略武器”参与之联合演习回应](/articles/voa/1011395.md)
 
 10-31 [强台“康妮”来袭 全台停摆并预警撤离8,600人](/articles/voa/1011396.md)
@@ -596,8 +600,4 @@
 10-19 [美国副国务卿坎贝尔敦促加强美日国防合作](/articles/voa/1011691.md)
 
 10-19 [古巴在遭遇大规模停电后关闭学校和工作场所](/articles/voa/1011692.md)
-
-10-19 [特朗普会是孤立主义者吗？](/articles/voa/1011693.md)
-
-10-19 [拜登访德，重点关注中东和乌克兰问题](/articles/voa/1011694.md)
 
