--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-31 [无论谁赢得总统大选 美国的欧洲盟友都面临挑战](/articles/voa/1011392.md)
+
 10-31 [奥斯汀曝朝鲜军队着俄罗斯制服正前往乌克兰 韩防长忧朝鲜半岛威胁升级](/articles/voa/1011393.md)
 
 10-31 [中国10月官方制造业PMI为50.1 睽违半年重回扩张区间](/articles/voa/1011394.md)
@@ -598,6 +600,4 @@
 10-19 [美国领导多国对朝鲜实施制裁](/articles/voa/1011690.md)
 
 10-19 [美国副国务卿坎贝尔敦促加强美日国防合作](/articles/voa/1011691.md)
-
-10-19 [古巴在遭遇大规模停电后关闭学校和工作场所](/articles/voa/1011692.md)
 
