--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-31 [不跪的世界｜比万圣节更怪诞——公司支付的工资，员工只拿到1/3？](/articles/cdt/335924.md)
+
+10-31 [修明札记｜最近的生育激励政策，力度还是有点小](/articles/cdt/335927.md)
+
+10-31 [四环青年｜投资千万建厂拿不到许可证，核查组的借口匪夷所思](/articles/cdt/335929.md)
+
 10-31 [剥洋葱people｜被造谣“十万彩礼做女友”女生：我不是货架上的商品](/articles/cdt/335933.md)
 
 10-31 [建设性意见｜计划生育政策还要存在多久？](/articles/cdt/335937.md)
@@ -594,10 +600,4 @@
 9-23 [原点original｜深圳一个孩子，在上学途中遇袭](/articles/cdt/336905.md)
 
 9-23 [【404文库】深圳遇难日本男童父亲小山纯平：我唯一的愿望，是这样的悲剧不再重演](/articles/cdt/336906.md)
-
-9-23 [【CDT周报】第187期：这名深圳孩子的离世，正在摧毁刚筑起的高楼与常识](/articles/cdt/336912.md)
-
-9-22 [【CDT报告汇】连线中国：西藏数字监控登峰造极 远超新疆（外二篇）](/articles/cdt/336913.md)
-
-9-24 [【404文库】“是否还愿意继续开放？是否还珍惜人的生命、尊严和自由？”（外二篇）](/articles/cdt/336914.md)
 
