--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+10-31 [人权捍卫者许志永狱中绝食20余天，健康状况恶化](/articles/dw/1023834.md)
+
+10-31 [中国留学生谎称美国公民投票后被拘留](/articles/dw/1023835.md)
+
+10-31 [支持解除美国对古巴封锁 阿根廷外长遭撤换](/articles/dw/1023836.md)
+
 10-31 [泽连斯基抱怨美国不守秘密、不兑现承诺](/articles/dw/1023837.md)
 
 10-31 [美国大选前5天 朝鲜发射洲际弹道导弹](/articles/dw/1023838.md)
@@ -594,10 +600,4 @@
 10-2 [美国大选：副总统候选人辩论登场  他们说的是真话吗](/articles/dw/1024132.md)
 
 10-2 [在战争的阴云下寻找爱](/articles/dw/1024133.md)
-
-10-2 [以色列遭伊朗飛彈襲擊 納坦雅胡揚言報復](/articles/dw/1024134.md)
-
-10-2 [“老司机”在德国考驾照，能轻松通过吗？](/articles/dw/1024135.md)
-
-10-1 [自行车与核弹：北约秘书长权力交接时刻的挑战](/articles/dw/1024136.md)
 
