--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-31 [比亚迪季度营收首次超过特斯拉](/articles/dw/1023833.md)
+
 10-31 [人权捍卫者许志永狱中绝食20余天，健康状况恶化](/articles/dw/1023834.md)
 
 10-31 [中国留学生谎称美国公民投票后被拘留](/articles/dw/1023835.md)
@@ -598,6 +600,4 @@
 10-2 [德国基础设施 做好抵御中国间谍之准备了吗？](/articles/dw/1024131.md)
 
 10-2 [美国大选：副总统候选人辩论登场  他们说的是真话吗](/articles/dw/1024132.md)
-
-10-2 [在战争的阴云下寻找爱](/articles/dw/1024133.md)
 
