--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-31 [中国消费低迷拖累国内和世界经济复苏，专家：改革需要付出政治代价](/articles/voa/1011389.md)
+
+10-31 [印尼强调对南中国海立场不变，称对中国海警船干扰做“适当”反应](/articles/voa/1011390.md)
+
 10-31 [中国启动新一轮网络言论整顿 针对谣言、水军等五类突出问题](/articles/voa/1011391.md)
 
 10-31 [无论谁赢得总统大选 美国的欧洲盟友都面临挑战](/articles/voa/1011392.md)
@@ -596,8 +600,4 @@
 10-19 [以色列否认联合国对其袭击驻黎巴嫩维和人员的指控](/articles/voa/1011687.md)
 
 10-19 [美国对朝鲜向俄罗斯输出士兵的报告表示“关切”](/articles/voa/1011688.md)
-
-10-19 [易富贤: 中国在人口危机上拔剑四顾心茫然](/articles/voa/1011689.md)
-
-10-19 [美国领导多国对朝鲜实施制裁](/articles/voa/1011690.md)
 
