--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-31 [美国公布涉俄制裁新名单 中国印度公司榜上有名](/articles/dw/1023831.md)
+
+10-31 [中国制造业PMI回升 经济学家乐观看待](/articles/dw/1023832.md)
+
 10-31 [比亚迪季度营收首次超过特斯拉](/articles/dw/1023833.md)
 
 10-31 [人权捍卫者许志永狱中绝食20余天，健康状况恶化](/articles/dw/1023834.md)
@@ -596,8 +600,4 @@
 10-2 [以色列“不欢迎”联合国秘书长 发布入境禁令](/articles/dw/1024129.md)
 
 10-2 [以色列和真主党较量始末](/articles/dw/1024130.md)
-
-10-2 [德国基础设施 做好抵御中国间谍之准备了吗？](/articles/dw/1024131.md)
-
-10-2 [美国大选：副总统候选人辩论登场  他们说的是真话吗](/articles/dw/1024132.md)
 
