--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-1 [欧委会对“海外版拼多多”Temu启动调查](/articles/dw/1023830.md)
+
 10-31 [美国公布涉俄制裁新名单 中国印度公司榜上有名](/articles/dw/1023831.md)
 
 10-31 [中国制造业PMI回升 经济学家乐观看待](/articles/dw/1023832.md)
@@ -598,6 +600,4 @@
 10-2 [中国刺激经济大招能奏效？ 专家：关键看人民买不买账](/articles/dw/1024128.md)
 
 10-2 [以色列“不欢迎”联合国秘书长 发布入境禁令](/articles/dw/1024129.md)
-
-10-2 [以色列和真主党较量始末](/articles/dw/1024130.md)
 
