--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-31 [路透社大型调查结果：美国经济韧性超预期，明年世界经济前景看好](/articles/voa/1011387.md)
+
 10-31 [朝鲜试射洲际弹道导弹后，首尔收紧对生产固体燃料所需材料出口管制](/articles/voa/1011388.md)
 
 10-31 [中国消费低迷拖累国内和世界经济复苏，专家：改革需要付出政治代价](/articles/voa/1011389.md)
@@ -598,6 +600,4 @@
 10-19 [俄罗斯归还501名士兵尸体；西方盟友考虑泽连斯基的胜利计划](/articles/voa/1011685.md)
 
 10-19 [真主党在哈马斯领导人被杀后誓言升级战争](/articles/voa/1011686.md)
-
-10-19 [以色列否认联合国对其袭击驻黎巴嫩维和人员的指控](/articles/voa/1011687.md)
 
