--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-1 [中国电商Temu因涉违法产品销售被欧盟调查，罚金可达全球营业额的6%](/articles/voa/1011385.md)
+
+11-1 [继朝鲜之后，俄罗斯很快将与伊朗签订具有军事联盟性质的条约](/articles/voa/1011386.md)
+
 10-31 [路透社大型调查结果：美国经济韧性超预期，明年世界经济前景看好](/articles/voa/1011387.md)
 
 10-31 [朝鲜试射洲际弹道导弹后，首尔收紧对生产固体燃料所需材料出口管制](/articles/voa/1011388.md)
@@ -596,8 +600,4 @@
 10-19 [特朗普称如果中国“进入”台湾 将对中国征收150%至200%的关税](/articles/voa/1011683.md)
 
 10-19 [中国无人机制造商大疆因被列入“黑名单”对五角大楼提起诉讼](/articles/voa/1011684.md)
-
-10-19 [俄罗斯归还501名士兵尸体；西方盟友考虑泽连斯基的胜利计划](/articles/voa/1011685.md)
-
-10-19 [真主党在哈马斯领导人被杀后誓言升级战争](/articles/voa/1011686.md)
 
