--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-1 [风声OPINION｜为什么出台了不少刺激消费的政策，消费还是不够强劲？](/articles/cdt/335920.md)
+
+11-1 [建设性意见｜限制万圣节装扮，是哪座城市最心虚？](/articles/cdt/335923.md)
+
 10-31 [不跪的世界｜比万圣节更怪诞——公司支付的工资，员工只拿到1/3？](/articles/cdt/335924.md)
 
 10-31 [修明札记｜最近的生育激励政策，力度还是有点小](/articles/cdt/335927.md)
@@ -596,8 +600,4 @@
 9-23 [建设性意见｜那么多中国人在日本被杀，怎么就没人反思仇华思想？](/articles/cdt/336899.md)
 
 9-23 [每日一语 2024.9.22](/articles/cdt/336902.md)
-
-9-23 [原点original｜深圳一个孩子，在上学途中遇袭](/articles/cdt/336905.md)
-
-9-23 [【404文库】深圳遇难日本男童父亲小山纯平：我唯一的愿望，是这样的悲剧不再重演](/articles/cdt/336906.md)
 
