--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-1 [美无人机制造商：中国的制裁将打击供应链](/articles/voa/1011378.md)
+
+11-1 [中东战火继续在多处战线燃烧，造成至少16人丧生](/articles/voa/1011379.md)
+
 11-1 [新报告：中国显示器行业崛起有可能损害美国国家安全](/articles/voa/1011380.md)
 
 11-1 [中国酒店业开始内卷 “双十一”掀价格割喉战](/articles/voa/1011381.md)
@@ -596,8 +600,4 @@
 10-19 [围台军演和习的两岸融合 专家：中共软硬兼施不合台湾民意](/articles/voa/1011676.md)
 
 10-19 [以色列总理住所遭无人机袭击无伤亡，以军空袭致加沙21人丧生](/articles/voa/1011677.md)
-
-10-19 [阿联酋斡旋 俄乌各自换回95名战俘](/articles/voa/1011678.md)
-
-10-19 [哈马斯领导人辛瓦尔丧生后 伊朗最高领袖哈梅内伊：哈马斯将继续存在](/articles/voa/1011679.md)
 
