--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-1 [美大选后中国将测试新总统对台海议题底线？专家：须寻求三方关系新平衡以避危机](/articles/voa/1011372.md)
+
 11-1 [美国：预计八千朝鲜士兵“未来几天”将在乌克兰投入作战行动](/articles/voa/1011373.md)
 
 11-1 [2024国会选举：众院中共问题特设委员会选后料将生变](/articles/voa/1011374.md)
@@ -598,6 +600,4 @@
 10-20 [乌克兰击退俄罗斯对基辅的空袭](/articles/voa/1011670.md)
 
 10-20 [数据显示东南亚受到美国对维吾尔族强迫劳动的贸易限制的主要冲击](/articles/voa/1011671.md)
-
-10-20 [乌克兰发布的视频据称显示朝鲜士兵在俄罗斯](/articles/voa/1011672.md)
 
