--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-1 [朝鲜称创纪录试射的是新型“火星炮-19”洲际弹道导弹](/articles/voa/1011370.md)
+
+11-1 [西班牙历经数十年最严重洪灾 死亡人数攀升至158人](/articles/voa/1011371.md)
+
 11-1 [美大选后中国将测试新总统对台海议题底线？专家：须寻求三方关系新平衡以避危机](/articles/voa/1011372.md)
 
 11-1 [美国：预计八千朝鲜士兵“未来几天”将在乌克兰投入作战行动](/articles/voa/1011373.md)
@@ -596,8 +600,4 @@
 10-20 [中国国家主席习近平要求解放军火箭军增强“战略威慑和实战能力”](/articles/voa/1011668.md)
 
 10-20 [朝鲜外相称美国新制裁监督小组非法](/articles/voa/1011669.md)
-
-10-20 [乌克兰击退俄罗斯对基辅的空袭](/articles/voa/1011670.md)
-
-10-20 [数据显示东南亚受到美国对维吾尔族强迫劳动的贸易限制的主要冲击](/articles/voa/1011671.md)
 
