--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-1 [路透社：中国研究人员基于Meta模型开发军用AI工具](/articles/voa/1011368.md)
+
 11-1 [中国海军首次在南中国海进行双航母编队演练](/articles/voa/1011369.md)
 
 11-1 [朝鲜称创纪录试射的是新型“火星炮-19”洲际弹道导弹](/articles/voa/1011370.md)
@@ -598,6 +600,4 @@
 10-20 [美防长呼吁以色列减少对黎巴嫩的空袭](/articles/voa/1011666.md)
 
 10-20 [中国驻缅甸曼德勒领事馆遭爆炸袭击 屋瓦轻微损毁](/articles/voa/1011667.md)
-
-10-20 [中国国家主席习近平要求解放军火箭军增强“战略威慑和实战能力”](/articles/voa/1011668.md)
 
