--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-1 [纪录台北：锦州街上的东北水饺](/articles/dw/1023826.md)
+
+11-1 [德国《性别自决法》正式生效 简化更改性别程序](/articles/dw/1023827.md)
+
 11-1 [北韓將參與俄烏戰事 美籲中國出手阻止](/articles/dw/1023828.md)
 
 11-1 [中国对白兰地下手 法国生产商艰难苦撑](/articles/dw/1023829.md)
@@ -596,8 +600,4 @@
 10-3 [德国禁止向以色列出售武器？](/articles/dw/1024124.md)
 
 10-3 [中國表態支持古特雷斯 批以色列無端指責](/articles/dw/1024125.md)
-
-10-2 [真主党与以色列地面部队交火](/articles/dw/1024126.md)
-
-10-2 [苏黎世托儿所附近持刀袭击，三名儿童受伤](/articles/dw/1024127.md)
 
