--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-1 [贝佐斯、马斯克……最富有的人如何影响美国大选](/articles/nyt/1042253.md)
+
 11-1 [美国呼吁北京出面阻止朝鲜向乌克兰战场派兵](/articles/nyt/1042254.md)
 
 11-1 [“美国优先”还是混乱无策？解读特朗普外交政策](/articles/nyt/1042255.md)
@@ -598,6 +600,4 @@
 7-24 [希拉里·克林顿：我知道哈里斯能打败特朗普](/articles/nyt/1042551.md)
 
 7-24 [法塔赫和哈马斯在北京展示团结，但疑虑犹存](/articles/nyt/1042552.md)
-
-7-23 [“女性因素”能帮助哈里斯击败特朗普吗](/articles/nyt/1042553.md)
 
