--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-1 [朝俄外长会 朝鲜承诺“坚定支持俄罗斯直至胜利”](/articles/dw/1023823.md)
+
+11-1 [记录台北：锦州街上的东北水饺](/articles/dw/1023824.md)
+
 11-1 [德国宣布关闭伊朗驻德三个领事馆](/articles/dw/1023825.md)
 
 11-1 [纪录台北：锦州街上的东北水饺](/articles/dw/1023826.md)
@@ -596,8 +600,4 @@
 10-3 [欧盟表决电动汽车关税在即 大概率通过](/articles/dw/1024121.md)
 
 10-3 [德语媒体：经济下行让中国领导层进入最高警戒](/articles/dw/1024122.md)
-
-10-3 [以黎战火升级 中东局势引人忧](/articles/dw/1024123.md)
-
-10-3 [德国禁止向以色列出售武器？](/articles/dw/1024124.md)
 
