--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-1 [南京大屠杀87周年 上海日本人学校将改上网课](/articles/dw/1023820.md)
+
 11-1 [欧日签署安全与防务伙伴关系协议](/articles/dw/1023821.md)
 
 11-1 [大众拟关德国3厂 员工忧饭碗不保](/articles/dw/1023822.md)
@@ -598,6 +600,4 @@
 10-4 [金正恩威胁韩国：如遭攻击将动用核武器](/articles/dw/1024118.md)
 
 10-4 [組合拳刺激房市有成？萬科、碧桂園離岸債券見漲](/articles/dw/1024119.md)
-
-10-4 [铁棒殴打，迫其下跪：越南谴责中国袭击其渔民的“残暴行为“](/articles/dw/1024120.md)
 
