--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-1 [“习近平”“胡锦涛”现身洛杉矶万圣节 声援上海等地被抓捕的年轻人](/articles/voa/1011363.md)
+
 11-1 [中国已开始为美国大选后双边贸易战重启做准备，谋求降低对美国农产品的依赖](/articles/voa/1011364.md)
 
 11-1 [中国环保官员：无论谁赢得美国大选，希望美国继续与别国在气候变化上合作](/articles/voa/1011365.md)
@@ -598,6 +600,4 @@
 10-20 [亲俄博主称俄军猛攻乌东塞利多韦市，乌军空袭俄一处军用机场和军工企业](/articles/voa/1011661.md)
 
 10-20 [以军继续两线作战，袭击贝鲁特真主党情报总部，空袭加沙哈马斯](/articles/voa/1011662.md)
-
-10-20 [在俄罗斯涉嫌干预的阴影下 摩尔多瓦举行总统大选及欧盟公投](/articles/voa/1011663.md)
 
