--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-1 [台风“康妮”重创台湾后，给福建沿海带来狂风暴雨，然后向日本方向移动](/articles/voa/1011362.md)
+
 11-1 [“习近平”“胡锦涛”现身洛杉矶万圣节 声援上海等地被抓捕的年轻人](/articles/voa/1011363.md)
 
 11-1 [中国已开始为美国大选后双边贸易战重启做准备，谋求降低对美国农产品的依赖](/articles/voa/1011364.md)
@@ -598,6 +600,4 @@
 10-20 [靖国神社秋祭再引中国不满 在日华人：首相对中强硬才能保障人权](/articles/voa/1011660.md)
 
 10-20 [亲俄博主称俄军猛攻乌东塞利多韦市，乌军空袭俄一处军用机场和军工企业](/articles/voa/1011661.md)
-
-10-20 [以军继续两线作战，袭击贝鲁特真主党情报总部，空袭加沙哈马斯](/articles/voa/1011662.md)
 
