--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-2 [绝食九日，用命维护尊严的人权律师王宇获释](/articles/voa/1011353.md)
+
 11-2 [新疆古墓博物馆获国际大奖引发批评](/articles/voa/1011354.md)
 
 11-2 [美德法呼吁中国释放被判徒刑的人权律师余文生和妻子许艳](/articles/voa/1011355.md)
@@ -598,6 +600,4 @@
 10-21 [中国启动救市 23家上市公司已利用“股票回购增持再贷款”计划](/articles/voa/1011651.md)
 
 10-21 [中国再下调关键贷款利率 寻求提振经济](/articles/voa/1011652.md)
-
-10-21 [美国加拿大军舰在中国军演后穿越台湾海峡](/articles/voa/1011653.md)
 
