--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-2 [飓风和罢工造成大幅减员，美国10月新增就业仅1.2万](/articles/voa/1011350.md)
+
 11-2 [报复将至？以色列对伊朗的打击及其对中国的影响](/articles/voa/1011351.md)
 
 11-2 [因违反美国制裁而被捕的俄商波斯托沃曾在香港被控洗钱](/articles/voa/1011352.md)
@@ -598,6 +600,4 @@
 10-21 [曾与胡锦涛握手寒暄的林信义将第三次代表台湾出席APEC峰会](/articles/voa/1011648.md)
 
 10-21 [沙特阿美首席执行官：对中国石油需求持“相当乐观”态度](/articles/voa/1011649.md)
-
-10-21 [亚洲市场波动 消化中国降息举措](/articles/voa/1011650.md)
 
