--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-2 [朝鲜派万名军人驰援俄罗斯 泽连斯基吁盟友勿袖手旁观](/articles/voa/1011340.md)
+
 11-2 [美国北极大使：中俄深化北极军事合作释放出“令人担忧的信号”](/articles/voa/1011341.md)
 
 11-2 [爱达荷州恐成全美首个禁止接种COVID-19疫苗的地区](/articles/voa/1011342.md)
@@ -598,6 +600,4 @@
 10-22 [美特使在贝鲁特与黎巴嫩官员会谈 推动解决以黎边境冲突](/articles/voa/1011638.md)
 
 10-22 [俄欧紧张局势升高之际，德国为北约新波罗的海海军战术总部举行落成典礼](/articles/voa/1011639.md)
-
-10-22 [金砖国家喀山峰会：全球变局下印度和中国能否弥合分歧？](/articles/voa/1011640.md)
 
