--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-2 [美国情报部门称“俄罗斯影响者”伪造了佐治亚州选民舞弊的假视频](/articles/voa/1011338.md)
+
+11-2 [中国扩大对韩国等9国免签 微博网民仇韩言论齐发](/articles/voa/1011339.md)
+
 11-2 [朝鲜派万名军人驰援俄罗斯 泽连斯基吁盟友勿袖手旁观](/articles/voa/1011340.md)
 
 11-2 [美国北极大使：中俄深化北极军事合作释放出“令人担忧的信号”](/articles/voa/1011341.md)
@@ -596,8 +600,4 @@
 10-22 [美国将军称，美国向菲律宾部署导弹对战备“极其重要”](/articles/voa/1011636.md)
 
 10-22 [FBI调查中国投资公司,中国投资人表示习以为常](/articles/voa/1011637.md)
-
-10-22 [美特使在贝鲁特与黎巴嫩官员会谈 推动解决以黎边境冲突](/articles/voa/1011638.md)
-
-10-22 [俄欧紧张局势升高之际，德国为北约新波罗的海海军战术总部举行落成典礼](/articles/voa/1011639.md)
 
