--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-2 [旧闻评论｜老胡归来：续写双向奔赴的舆论孽缘](/articles/cdt/335895.md)
+
 11-2 [正面连接｜救救工厂：工厂真的卷不动了](/articles/cdt/335898.md)
 
 11-2 [旧闻评论｜老胡归来：续写双向奔赴的舆论孽缘](/articles/cdt/335900.md)
@@ -598,6 +600,4 @@
 9-23 [每日一语 2024.9.23](/articles/cdt/336861.md)
 
 9-23 [风声OPINION｜一种社会凝视和偏见：当外卖小哥成为流量密码](/articles/cdt/336866.md)
-
-9-23 [玖奌杂货店｜我不害怕苹果爆炸，只害怕傻X发疯](/articles/cdt/336869.md)
 
