--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-2 [美大选白热化 华盛顿州收暴力事件通报派出国民兵 哈里斯、特朗普力拼威斯康星州](/articles/voa/1011336.md)
+
 11-2 [以色列轰炸加沙和黎巴嫩 美国大选前停火的希望逐渐破灭](/articles/voa/1011337.md)
 
 11-2 [美国情报部门称“俄罗斯影响者”伪造了佐治亚州选民舞弊的假视频](/articles/voa/1011338.md)
@@ -598,6 +600,4 @@
 10-22 [帕劳在中国威胁和美国军事扩张的背景下准备大选](/articles/voa/1011634.md)
 
 10-22 [印中边境巡逻协议：两国经济合作的新曙光](/articles/voa/1011635.md)
-
-10-22 [美国将军称，美国向菲律宾部署导弹对战备“极其重要”](/articles/voa/1011636.md)
 
