--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-2 [联合国教科文组织：记者遇害事件激增](/articles/dw/1023814.md)
+
 11-2 [关于朝鲜派兵赴俄 这些你不得不知](/articles/dw/1023815.md)
 
 11-2 [“兄弟情谊”不断升温 欧尔班准备开香槟贺特朗普胜选](/articles/dw/1023816.md)
@@ -598,6 +600,4 @@
 10-4 [新官上任：北约秘书长吕特面临重重挑战](/articles/dw/1024112.md)
 
 10-4 [任志强女儿发公开信 恳请习近平允其父保外就医](/articles/dw/1024113.md)
-
-10-4 [德国无力回天 对华电动汽车关税成定局](/articles/dw/1024114.md)
 
