--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-2 [台湾恐成美国“弃子”? 特朗普选前撂话再掀两岸论战](/articles/voa/1011333.md)
+
+11-2 [德黑兰称有能力制造核武，哈梅内伊对美国和以色列发出警告](/articles/voa/1011334.md)
+
 11-2 [身处台海紧张局势中心的台湾紧盯美国大选进展](/articles/voa/1011335.md)
 
 11-2 [美大选白热化 华盛顿州收暴力事件通报派出国民兵 哈里斯、特朗普力拼威斯康星州](/articles/voa/1011336.md)
@@ -596,8 +600,4 @@
 10-22 [美国特使在贝鲁特与黎巴嫩官员会谈](/articles/voa/1011631.md)
 
 10-22 [直击大选假信息：解密中国网络“垃圾伪装”行动](/articles/voa/1011632.md)
-
-10-22 [张欣: 病急乱下药的中国股市](/articles/voa/1011633.md)
-
-10-22 [帕劳在中国威胁和美国军事扩张的背景下准备大选](/articles/voa/1011634.md)
 
