--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-2 [美国华盛顿州动用国民警卫队预防大选骚乱](/articles/dw/1023813.md)
+
 11-2 [联合国教科文组织：记者遇害事件激增](/articles/dw/1023814.md)
 
 11-2 [关于朝鲜派兵赴俄 这些你不得不知](/articles/dw/1023815.md)
@@ -598,6 +600,4 @@
 10-5 [欧盟将表决中国电动车关税 推翻难度大](/articles/dw/1024111.md)
 
 10-4 [新官上任：北约秘书长吕特面临重重挑战](/articles/dw/1024112.md)
-
-10-4 [任志强女儿发公开信 恳请习近平允其父保外就医](/articles/dw/1024113.md)
 
