--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-3 [津巴布韦居民抗议中国金矿公司破坏环境](/articles/voa/1011330.md)
+
 11-3 [泽连斯基呼吁西方盟友允许向俄境内的朝军发动先发制人的打击](/articles/voa/1011331.md)
 
 11-2 [中国前卫文艺空间受限：从《三体》编辑被查到金星演出被拒，多层禁忌遏制文化创新？](/articles/voa/1011332.md)
@@ -598,6 +600,4 @@
 10-22 [美国对支持伊朗和巴基斯坦武器计划的中国公司实施限制](/articles/voa/1011628.md)
 
 10-22 [美加军舰通过台湾海峡后中国宣布在台海实弹军演](/articles/voa/1011629.md)
-
-10-22 [世界维吾尔代表大会在召开前遭到骚扰](/articles/voa/1011630.md)
 
