--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-3 [以色列军方：以色列在黎巴嫩北部逮捕真主党高级特工](/articles/voa/1011328.md)
+
 11-3 [在中国日趋增高的压力中,台湾预计从美国得到乌克兰战场检验的武器](/articles/voa/1011329.md)
 
 11-3 [津巴布韦居民抗议中国金矿公司破坏环境](/articles/voa/1011330.md)
@@ -598,6 +600,4 @@
 10-22 [中国奢侈品市场急剧降温：全球巨头LVMH销量滑坡，行业复苏前景不明](/articles/voa/1011626.md)
 
 10-22 [美国表示“将为乌克兰提供所需”，以继续与俄罗斯作战](/articles/voa/1011627.md)
-
-10-22 [美国对支持伊朗和巴基斯坦武器计划的中国公司实施限制](/articles/voa/1011628.md)
 
