--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-3 [海外掘金｜中国最国际化的城市，关停唯一的外语频道](/articles/cdt/335798.md)
+
 11-3 [艾大荀｜公益机构失去的，是自我设置议题的权利](/articles/cdt/335880.md)
 
 11-3 [重案组37号｜被囚禁的5年，被转向的人生](/articles/cdt/335891.md)
@@ -598,6 +600,4 @@
 9-24 [慕枫歌歌｜相信苹果手机爆炸的人，与相信照相机可以摄魂的人](/articles/cdt/336846.md)
 
 9-24 [一个生物狗的科普小园｜失去中国一年，日本水产业到底如何？我们用数据说话](/articles/cdt/336849.md)
-
-9-24 [浣花溪杜甫｜苹果手机爆炸和特斯拉刹车失灵，造谣的套路很相似](/articles/cdt/336852.md)
 
