--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-3 [美军：B-52轰炸机抵达中东](/articles/voa/1011326.md)
+
+11-3 [以色列中部遇袭11人受伤，伊朗领导人保证对以“惩罚性回应”](/articles/voa/1011327.md)
+
 11-3 [以色列军方：以色列在黎巴嫩北部逮捕真主党高级特工](/articles/voa/1011328.md)
 
 11-3 [在中国日趋增高的压力中,台湾预计从美国得到乌克兰战场检验的武器](/articles/voa/1011329.md)
@@ -596,8 +600,4 @@
 10-22 [澳大利亚将斥资47亿美元购买美国先进导弹](/articles/voa/1011624.md)
 
 10-22 [飓风“奥斯卡”横扫古巴酿6死 大规模停电瘫痪城市、引发抗议](/articles/voa/1011625.md)
-
-10-22 [中国奢侈品市场急剧降温：全球巨头LVMH销量滑坡，行业复苏前景不明](/articles/voa/1011626.md)
-
-10-22 [美国表示“将为乌克兰提供所需”，以继续与俄罗斯作战](/articles/voa/1011627.md)
 
