--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-3 [朝鲜称尹锡悦增加核战争风险 韩美日三国联合空中演习反制核导弹威胁](/articles/voa/1011324.md)
+
 11-3 [中国式美国工厂：为福耀美国打工的中国“牛马”](/articles/voa/1011325.md)
 
 11-3 [美军：B-52轰炸机抵达中东](/articles/voa/1011326.md)
@@ -598,6 +600,4 @@
 10-22 [台湾称中国实弹演习可能是旨在扩大“威慑”效应](/articles/voa/1011622.md)
 
 10-22 [美国很快将限制对中国的人工智能投资](/articles/voa/1011623.md)
-
-10-22 [澳大利亚将斥资47亿美元购买美国先进导弹](/articles/voa/1011624.md)
 
