--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-3 [直击大选假信息：中国虚假信息行动开始质疑美国大选的公正性](/articles/voa/1011318.md)
+
 11-3 [刘德华在台演唱《中国人》成中共宣传素材 引起台湾舆论分裂](/articles/voa/1011319.md)
 
 11-3 [中国催生政策不敌经济下滑现实 今年前三季度结婚人数较去年同比下降](/articles/voa/1011320.md)
@@ -598,6 +600,4 @@
 10-22 [中国“光棍节”好景不再，消费降级情绪弥漫市场](/articles/voa/1011616.md)
 
 10-22 [因应解放军封锁，台湾强化战时粮食等战略物资储备](/articles/voa/1011617.md)
-
-10-22 [中俄伊朝新“邪恶轴心”有多危险？](/articles/voa/1011618.md)
 
