--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-3 [美国大选前夕，中国出动大批机舰在台湾周边海空域活动](/articles/voa/1011316.md)
+
+11-3 [2024年总统大选，更多华裔选民出钱出力助选](/articles/voa/1011317.md)
+
 11-3 [直击大选假信息：中国虚假信息行动开始质疑美国大选的公正性](/articles/voa/1011318.md)
 
 11-3 [刘德华在台演唱《中国人》成中共宣传素材 引起台湾舆论分裂](/articles/voa/1011319.md)
@@ -596,8 +600,4 @@
 10-22 [韩国表示将考虑向基辅提供杀伤性武器](/articles/voa/1011614.md)
 
 10-22 [中国政府与梵蒂冈续签倍受争议的主教任命临时协议](/articles/voa/1011615.md)
-
-10-22 [中国“光棍节”好景不再，消费降级情绪弥漫市场](/articles/voa/1011616.md)
-
-10-22 [因应解放军封锁，台湾强化战时粮食等战略物资储备](/articles/voa/1011617.md)
 
