--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-3 [美国大选进入倒计时，哈里斯和特朗普分赴摇摆州为胜选做最后努力](/articles/voa/1011314.md)
+
+11-3 [遭中共断网逾两个月 高瑜在京生活、就诊寸步难行](/articles/voa/1011315.md)
+
 11-3 [美国大选前夕，中国出动大批机舰在台湾周边海空域活动](/articles/voa/1011316.md)
 
 11-3 [2024年总统大选，更多华裔选民出钱出力助选](/articles/voa/1011317.md)
@@ -596,8 +600,4 @@
 10-23 [金砖峰会在俄国登场 泰马抢入令中国得势？](/articles/voa/1011612.md)
 
 10-23 [欧洲议会批准向乌克兰提供以俄海外资产孳息做抵押的350亿欧元贷款](/articles/voa/1011613.md)
-
-10-22 [韩国表示将考虑向基辅提供杀伤性武器](/articles/voa/1011614.md)
-
-10-22 [中国政府与梵蒂冈续签倍受争议的主教任命临时协议](/articles/voa/1011615.md)
 
