--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-4 [白宫万圣节活动 拜登和熊猫牵手？](/articles/dw/1023807.md)
+
 11-3 [美大选倒数 中国军机再越台海中线](/articles/dw/1023808.md)
 
 11-3 [印尼同俄罗斯首次举行联合军演](/articles/dw/1023809.md)
@@ -598,6 +600,4 @@
 10-5 [包机模式 海空双道 各国如何从黎巴嫩撤侨？](/articles/dw/1024105.md)
 
 10-5 [两岸关注“中国撤侨载回1名台湾人”](/articles/dw/1024106.md)
-
-10-5 [美智库：中国或通过经济战和网络战迫台湾投降](/articles/dw/1024107.md)
 
