--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-4 [台湾外交部：台湾不忧心美国大选结果，无论谁当选都对未来台美关系深具信心](/articles/voa/1011313.md)
+
 11-3 [美国大选进入倒计时，哈里斯和特朗普分赴摇摆州为胜选做最后努力](/articles/voa/1011314.md)
 
 11-3 [遭中共断网逾两个月 高瑜在京生活、就诊寸步难行](/articles/voa/1011315.md)
@@ -598,6 +600,4 @@
 10-23 [习近平会晤普京，称中俄是乱世中的“稳定力量”](/articles/voa/1011611.md)
 
 10-23 [金砖峰会在俄国登场 泰马抢入令中国得势？](/articles/voa/1011612.md)
-
-10-23 [欧洲议会批准向乌克兰提供以俄海外资产孳息做抵押的350亿欧元贷款](/articles/voa/1011613.md)
 
