--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-4 [巴基斯坦被囚前总理的律师被绑架后又出现引发争议](/articles/voa/1011310.md)
+
 11-4 [伊朗总统：潜在停火“可能影响”对以色列的回应](/articles/voa/1011311.md)
 
 11-4 [俄罗斯向乌克兰发射近百架无人机 泽连斯基敦促更严厉制裁莫斯科](/articles/voa/1011312.md)
@@ -598,6 +600,4 @@
 10-23 [西方国家呼吁新疆和西藏的人权状况透明化](/articles/voa/1011608.md)
 
 10-23 [布林肯敦促内塔尼亚胡在哈马斯领导人死亡后达成加沙停火协议](/articles/voa/1011609.md)
-
-10-23 [帕劳海洋保育成就面临考验：扩大捕鱼范围引发争议](/articles/voa/1011610.md)
 
