--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-4 [维基百科在印度陷入法律纠纷](/articles/voa/1011307.md)
+
+11-4 [以色列派兵进入叙利亚，拘留据称的伊朗代理人](/articles/voa/1011308.md)
+
 11-4 [联合国专家：伊朗把也门胡塞反政府武装改造成强大的军事力量](/articles/voa/1011309.md)
 
 11-4 [巴基斯坦被囚前总理的律师被绑架后又出现引发争议](/articles/voa/1011310.md)
@@ -596,8 +600,4 @@
 10-23 [联合国：加沙迫在眉睫的发展危机危及子孙后代](/articles/voa/1011605.md)
 
 10-23 [美国之音专访陆军第五军司令，探讨俄罗斯对西方威胁](/articles/voa/1011606.md)
-
-10-23 [巴基斯坦村民反对中巴经济走廊的一些煤炭开采等项目](/articles/voa/1011607.md)
-
-10-23 [西方国家呼吁新疆和西藏的人权状况透明化](/articles/voa/1011608.md)
 
