--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-4 [美國大選不再是老白男戰場 青年男女選票是關鍵](/articles/dw/1023806.md)
+
 11-4 [白宫万圣节活动 拜登和熊猫牵手？](/articles/dw/1023807.md)
 
 11-3 [美大选倒数 中国军机再越台海中线](/articles/dw/1023808.md)
@@ -598,6 +600,4 @@
 10-5 [以黎战火持续   拜登警告不要攻击伊朗石油设施](/articles/dw/1024104.md)
 
 10-5 [包机模式 海空双道 各国如何从黎巴嫩撤侨？](/articles/dw/1024105.md)
-
-10-5 [两岸关注“中国撤侨载回1名台湾人”](/articles/dw/1024106.md)
 
