--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+11-4 [贺锦丽和特朗普为争取摇摆选民展开“最后较量”](/articles/nyt/1042248.md)
+
+11-4 [摇摆州选情有多胶着？民调告诉我们的关键信息](/articles/nyt/1042249.md)
+
 11-4 [若特朗普当选，美国会“完蛋”吗？](/articles/nyt/1042250.md)
 
 11-4 [iPhone为何中国制造？](/articles/nyt/1042251.md)
@@ -596,8 +600,4 @@
 7-25 [人大教授遭举报后被开除，官方声明为何不提“性骚扰”](/articles/nyt/1042546.md)
 
 7-25 [乌克兰敦促中国在推动结束俄乌战争上发挥作用](/articles/nyt/1042547.md)
-
-7-25 [用“没有亲生孩子”攻击贺锦丽暴露了你的无知](/articles/nyt/1042548.md)
-
-7-24 [哈里斯“表情包”再翻红，尴尬米姆变大选东风？](/articles/nyt/1042549.md)
 
