--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-4 [萝严肃｜对一个主妇的恨意](/articles/cdt/335765.md)
+
+11-4 [每日一语 2024.11.3](/articles/cdt/335767.md)
+
 11-4 [【404文库】基本常识｜我所了解的姜萍事件始末](/articles/cdt/335770.md)
 
 11-3 [每日一语 2024.11.2](/articles/cdt/335781.md)
@@ -596,8 +600,4 @@
 9-25 [雷叔写故事｜入不敷出的成武县，每年给退休公务员发8亿养老金](/articles/cdt/336826.md)
 
 9-25 [竹不倒｜石家庄这事儿，是不是恐怖的过头了？](/articles/cdt/336828.md)
-
-9-25 [每日一语 2024.9.24](/articles/cdt/336831.md)
-
-9-25 [地球公民金建国｜罗翔的“翻车”是一种必然](/articles/cdt/336833.md)
 
