--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-4 [中国太阳能电池板厂商灵活转移产地规避美国关税](/articles/voa/1011305.md)
+
 11-4 [联邦法官允许艾奥瓦州质疑选民名单 或影响归化公民](/articles/voa/1011306.md)
 
 11-4 [维基百科在印度陷入法律纠纷](/articles/voa/1011307.md)
@@ -598,6 +600,4 @@
 10-23 [美情报单位忧虑俄国、中国与伊朗利用大选煽动暴力](/articles/voa/1011603.md)
 
 10-23 [“得宾州者得天下”？宾州华裔选民如何看待2024总统大选？](/articles/voa/1011604.md)
-
-10-23 [联合国：加沙迫在眉睫的发展危机危及子孙后代](/articles/voa/1011605.md)
 
