--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-4 [倪刃｜被滥用的“内卷”一词，本意早已被扭曲](/articles/cdt/335752.md)
+
+11-4 [西坡原创｜闹剧终于收场，真相依然是奢侈品](/articles/cdt/335755.md)
+
 11-4 [凤凰网｜真实世界里的逝者沙白：对话沙白父亲、朋友、前同事、学生、邻居](/articles/cdt/335759.md)
 
 11-4 [萝严肃｜对一个主妇的恨意](/articles/cdt/335765.md)
@@ -596,8 +600,4 @@
 9-25 [真实故事计划｜发生在离婚期间的杀人](/articles/cdt/336814.md)
 
 9-25 [弱信号｜股市、十万亿及与此相关的一些拉拉杂杂的想法](/articles/cdt/336816.md)
-
-9-25 [现实的模样｜许多国道纷纷开启“收费模式”，背后究竟为了什么？](/articles/cdt/336818.md)
-
-9-25 [知灼｜吉林一公司禁止员工携带苹果手机进入办公室：四年中标项目数十个，几乎全是政府工程](/articles/cdt/336822.md)
 
