--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-4 [聿文视界：中共对美制度战：把美国选举塑造成“美式民主的失败”](/articles/voa/1011302.md)
+
 11-4 [缅甸军政府领导人本周访中 政变后首次](/articles/voa/1011303.md)
 
 11-4 [中国太阳能电池板厂商灵活转移产地规避美国关税](/articles/voa/1011304.md)
@@ -598,6 +600,4 @@
 10-23 [美前国务卿赖斯发出警示：中国只需让台湾变得像香港即可侵蚀其独立性](/articles/voa/1011600.md)
 
 10-23 [美台商业协会宣布联邦参议员马克·凯利为其荣誉共同主席](/articles/voa/1011601.md)
-
-10-23 [中国驻缅甸曼德勒领馆遭袭 各方势力背后角力隐现](/articles/voa/1011602.md)
 
