--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-4 [中国政府就欧盟电动车反补贴终裁措施在世贸组织提起诉讼](/articles/voa/1011300.md)
+
 11-4 [美国权力交接在即，哈里斯、特朗普对华政策初探](/articles/voa/1011301.md)
 
 11-4 [聿文视界：中共对美制度战：把美国选举塑造成“美式民主的失败”](/articles/voa/1011302.md)
@@ -598,6 +600,4 @@
 10-23 [美国大选临近 中国出口商寻求避险](/articles/voa/1011598.md)
 
 10-23 [新闻自由项目为缅甸媒体提供设备和培训](/articles/voa/1011599.md)
-
-10-23 [美前国务卿赖斯发出警示：中国只需让台湾变得像香港即可侵蚀其独立性](/articles/voa/1011600.md)
 
