--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-4 [劳务宏观笔记｜每天工作6小时23分？这数据能信吗？](/articles/cdt/335746.md)
+
+11-4 [鱼眼观察｜闹剧终于收场，真相依然是奢侈品](/articles/cdt/335748.md)
+
+11-5 [【404文库】卖杏花｜不要骂姜萍，是你活该](/articles/cdt/335749.md)
+
 11-4 [倪刃｜被滥用的“内卷”一词，本意早已被扭曲](/articles/cdt/335752.md)
 
 11-4 [西坡原创｜闹剧终于收场，真相依然是奢侈品](/articles/cdt/335755.md)
@@ -594,10 +600,4 @@
 9-26 [常识流通处｜有感于俄罗斯将禁止宣传“无孩生活方式”](/articles/cdt/336801.md)
 
 9-26 [每日一语 2024.9.25](/articles/cdt/336804.md)
-
-9-26 [【404文库】历史总在押韵｜作死！在自己权力范围内，最大限度的为难了无牵挂的人](/articles/cdt/336808.md)
-
-9-25 [真实故事计划｜发生在离婚期间的杀人](/articles/cdt/336814.md)
-
-9-25 [弱信号｜股市、十万亿及与此相关的一些拉拉杂杂的想法](/articles/cdt/336816.md)
 
