--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-4 [在对华科技政策上，特朗普与哈里斯谁更可能对中国实施“卡脖子”战略?](/articles/voa/1011299.md)
+
 11-4 [中国政府就欧盟电动车反补贴终裁措施在世贸组织提起诉讼](/articles/voa/1011300.md)
 
 11-4 [美国权力交接在即，哈里斯、特朗普对华政策初探](/articles/voa/1011301.md)
@@ -598,6 +600,4 @@
 10-23 [中国辽宁号航母编队航经台湾海峡北驶 台防长称国际不会坐视中国封锁台湾](/articles/voa/1011597.md)
 
 10-23 [美国大选临近 中国出口商寻求避险](/articles/voa/1011598.md)
-
-10-23 [新闻自由项目为缅甸媒体提供设备和培训](/articles/voa/1011599.md)
 
