--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-5 [选前最后一天！哈里斯和特朗普双双为创造历史而最后冲刺](/articles/voa/1011297.md)
+
+11-5 [中国多管齐下催生育，民众反感声音四起：生孩子真有好处，还用天天催吗？](/articles/voa/1011298.md)
+
 11-4 [在对华科技政策上，特朗普与哈里斯谁更可能对中国实施“卡脖子”战略?](/articles/voa/1011299.md)
 
 11-4 [中国政府就欧盟电动车反补贴终裁措施在世贸组织提起诉讼](/articles/voa/1011300.md)
@@ -596,8 +600,4 @@
 10-23 [美国和国际货币基金组织称，中国最新刺激措施还不足够](/articles/voa/1011595.md)
 
 10-23 [苹果首席执行官库克访华会见中国工信部部长 愿加大在中国投资](/articles/voa/1011596.md)
-
-10-23 [中国辽宁号航母编队航经台湾海峡北驶 台防长称国际不会坐视中国封锁台湾](/articles/voa/1011597.md)
-
-10-23 [美国大选临近 中国出口商寻求避险](/articles/voa/1011598.md)
 
