--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-5 [巴基斯坦：边防军击毙几名试图从阿富汗越境的激进分子](/articles/voa/1011291.md)
+
 11-5 [《经济学人》前主编：谁当选美国总统都不会放弃台湾而向北京示弱](/articles/voa/1011292.md)
 
 11-5 [法国表示在中国加征白兰地关税问题上仍有谈判空间](/articles/voa/1011293.md)
@@ -598,6 +600,4 @@
 10-23 [印中峰会在中断五年后恢复，两国关系正常化迈出第一步](/articles/voa/1011589.md)
 
 10-23 [韩国情报机构证实三千朝鲜士兵已在俄受训，将部署到乌战场](/articles/voa/1011590.md)
-
-10-23 [无论哈里斯还是特朗普胜选，美中科技战都会更加激烈](/articles/voa/1011591.md)
 
