--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-5 [台湾统促党成员涉收中资进行认知战被起诉 学者：证实传言助民众警觉](/articles/voa/1011280.md)
+
 11-5 [分析人士：朝鲜在对俄关系上冒险孤注一掷](/articles/voa/1011281.md)
 
 11-5 [美国就朝鲜出兵乌克兰议题在联合国与俄罗斯对抗](/articles/voa/1011282.md)
@@ -598,6 +600,4 @@
 10-24 [对于西藏流亡领袖来说，走自治的中间道路仍然是核心重点](/articles/voa/1011578.md)
 
 10-24 [华为设备被发现含有台积电芯片 美国会议员要求解释](/articles/voa/1011579.md)
-
-10-24 [七国集团将以俄罗斯冻结资产援助乌克兰](/articles/voa/1011580.md)
 
