--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-6 [世卫组织：英国两例猴痘病例是欧洲首例本地传播](/articles/voa/1011252.md)
+
+11-6 [以色列各地民众抗议内塔尼亚胡解除国防部长职务](/articles/voa/1011253.md)
+
+11-6 [在美国大选日当天，约三千移民向美国进发](/articles/voa/1011254.md)
+
 11-6 [泽伦斯基:乌克兰军队已与朝鲜军人接战](/articles/voa/1011255.md)
 
 11-6 [报告说，俄罗斯就石油销售欺骗欧佩克，以资助乌克兰战争](/articles/voa/1011256.md)
@@ -594,10 +600,4 @@
 10-25 [联合国报告：如果不采取更多行动 全球气温将升高摄氏3.1度](/articles/voa/1011550.md)
 
 10-25 [G7正在敲定向乌克兰提供的500亿美元贷款](/articles/voa/1011551.md)
-
-10-25 [联合国：帮派攻击导致海地上万人流离失所](/articles/voa/1011552.md)
-
-10-25 [2024国会选举：参众两院控制权会否出现大反转？](/articles/voa/1011553.md)
-
-10-25 [乌克兰：朝鲜军队被部署在乌军攻入的俄罗斯库尔斯克地区](/articles/voa/1011554.md)
 
