--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-6 [美国大选观战指南：摇摆州战况如何？结果何时公布？](/articles/nyt/1042242.md)
+
 11-5 [美国工厂能抵挡新一轮“中国冲击”吗](/articles/nyt/1042243.md)
 
 11-5 [“有生以来最重要的一次选举”：两党为投票日最后冲刺](/articles/nyt/1042244.md)
@@ -598,6 +600,4 @@
 7-26 [中国人工智能进步加速，正缩小与美国差距](/articles/nyt/1042540.md)
 
 7-26 [中俄轰炸机在阿拉斯加附近巡逻，美国加拿大出动战机拦截](/articles/nyt/1042541.md)
-
-7-26 [中国央行意外下调关键利率，试图提振经济](/articles/nyt/1042542.md)
 
