--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-6 [香港逐步淘汰不达标㓥房，穷人栖身何处？](/articles/nyt/1042239.md)
+
 11-6 [俄罗斯被指密谋在欧洲货机上放置燃烧装置](/articles/nyt/1042240.md)
 
 11-6 [聚焦美国大选：投票陆续结束，七大战场州将决定胜负](/articles/nyt/1042241.md)
@@ -598,6 +600,4 @@
 7-29 [布林肯与王毅会面，就中国对俄罗斯军事支持向中方施压](/articles/nyt/1042537.md)
 
 7-26 [美国芯片为何仍流入俄罗斯？香港空壳公司背后的秘密链条](/articles/nyt/1042538.md)
-
-7-26 [强大的女性让特朗普“抓狂”](/articles/nyt/1042539.md)
 
