--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-6 [共和党赢得美国参议院多数 众议院席次取得进展](/articles/voa/1011247.md)
+
 11-6 [印度外长称无论谁当选 美国都将更加孤立主义](/articles/voa/1011248.md)
 
 11-6 [特朗普发表胜选演说 哈里斯尚未表态](/articles/voa/1011249.md)
@@ -598,6 +600,4 @@
 10-25 [中国良心犯许志永狱中绝食三周 健康急速恶化](/articles/voa/1011545.md)
 
 10-25 [台湾总统赖清德前线岛屿纪念“古宁头战役”75周年 称“外部力量”无法改变台湾的未来](/articles/voa/1011546.md)
-
-10-25 [在缅甸内战中，中国怎么支持摇摇欲坠的军政府？](/articles/voa/1011547.md)
 
