--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-6 [协助打击犯罪、数据隐私新考验 AI能让治安更安全?](/articles/dw/1023785.md)
+
+11-6 [巴黎车展 中欧车企摆擂台](/articles/dw/1023786.md)
+
 11-6 [特朗普自行宣布胜选 世界各国领导人作何反应？](/articles/dw/1023787.md)
 
 11-6 [爆粗口鹦鹉走红 脏话难戒 带偏同伴](/articles/dw/1023788.md)
@@ -596,8 +600,4 @@
 10-7 [德国军舰完成穿越南中国海](/articles/dw/1024083.md)
 
 10-7 [长平观察：绝食百日，郭飞雄不该孤单](/articles/dw/1024084.md)
-
-10-7 [长平漫游：“我们要去巴黎！”](/articles/dw/1024085.md)
-
-10-7 [加沙战争一周年：欧洲同以色列的艰难关系](/articles/dw/1024086.md)
 
