--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-6 [全球对特朗普宣布胜选的反应](/articles/voa/1011246.md)
+
 11-6 [共和党赢得美国参议院多数 众议院席次取得进展](/articles/voa/1011247.md)
 
 11-6 [印度外长称无论谁当选 美国都将更加孤立主义](/articles/voa/1011248.md)
@@ -598,6 +600,4 @@
 10-25 [中印达成边界解决方案后，双方边防部队开始从两处争议地点后撤](/articles/voa/1011544.md)
 
 10-25 [中国良心犯许志永狱中绝食三周 健康急速恶化](/articles/voa/1011545.md)
-
-10-25 [台湾总统赖清德前线岛屿纪念“古宁头战役”75周年 称“外部力量”无法改变台湾的未来](/articles/voa/1011546.md)
 
